:memo:第一节-函数

--- a/大学数学.md
+++ b/大学数学.md
@@ -14,17 +14,31 @@
 
 ​	**值域** $Rf=f(D)=\{y|y=f(x),x∈D\}$
 
-函数概念的两个基本要素：定义域、对应规则
+函数概念的两个基本要素：定义域、对应规则，基本要素完全相同的函数就是同一函数
+
+【典例1】符号函数：
+$$
+y = sgn(x) =\left\{\begin{matrix}   -1 & x<0 \\    0 & x=0 \\1 & x>0\end{matrix}\right.
+$$
+【典例2】设x为任意实数，不超过x的最大整数称为x的整数部分，记为[x].函数y=[x]称为**取整函数**.
+
+注:取整函数的**基本不等式**：$x-1<[x]≤x$
 
 **2.复合函数**
 
-复合函数的定义：设$y=f(u)$的定义域为$D_f$，$u=g(x)$的定义域为$D_g$，值域为$R_g$，若$D_f∩R_g≠∅$，则称函数$y=f[g(x)]$为函数$y=f(u)$与$u=g(x)$的复合函数。
+复合函数的定义：设$y=f(u)$的定义域为$D_f$，$u=g(x)$的定义域为$D_g$，值域为$R_g$，若$D_f∩R_g≠∅$，则称函数$y=f[g(x)]$为函数$y=f(u)$与$u=g(x)$的**复合函数**。（若$D_f∩R_g=∅$则不能复合）
 
 它的定义域为$\{x|x∈D_g，g(x)∈D_f\}$
 
 **3.反函数**
 
 反函数的定义：设函数$y=f(x)$的定义域为$D$，值域为$R_y$。若对任意$y∈R_y$，有**唯一**确定的x∈D，使得$y=f(x)$，则记为$x=f^{-1}(y)$。称其为函数$y=f(x)$的**反函数**。
+
+【注1】：有时也将$y=f(x)$的反函数$x=f^{-1}(y)$写成$y=f^{-1}(x)$
+
+* 在同一直角坐标系中，$y=f(x)$和$x=f^{-1}(y)$图形**重合**，但$y=f(x)$和$y=f^{-1}(x)$关于$y=x$对称
+
+【注2】:$f^{-1}(f(x))=x$、$f(f^{-1}(x))=x$
 
 **4.初等函数**
 
@@ -67,7 +81,7 @@
 
 **2.奇偶性**
 
-1. 定义：偶函数$f(-x)=f(x)$，奇函数$f(-x)=f(x)$
+1. 定义：设函数$y=f(x)$的定义域D关于原点对称，偶函数$f(-x)=f(x)$，奇函数$f(-x)=f(x)$
 
 奇函数有哪些：
 $$
@@ -96,7 +110,7 @@ $$
 
 连续的奇函数其原函数**都是**偶函数；
 
-连续的偶函数其原函数**之一**是奇函数。
+连续的偶函数其原函数**有且仅有一个**是奇函数。
 
 (4) 设$f(x)$连续，则：
 
@@ -121,7 +135,7 @@ $$
 
 **3.周期性**
 
-1. 定义：$f(x+T) = f(x)$
+1. 定义：$f(x+T) = f(x)$（其中T>0）
 
 周期为2π的函数：$sinx \quad cosx$
 
@@ -137,7 +151,39 @@ $$
 
 (3) 周期函数的原函数**不一定**是周期函数，比如：$f'(x) = cosx + 1$ 
 
+【拓展1】设$f(x)$连续且以T为周期，则
 
+$\displaystyle{F(x)=\int^x_0f(t)dt}$是以T为周期的周期函数$\displaystyle{\Leftrightarrow \int^T_0f(t)dt}$
+
+【拓展2】周期函数的原函数是周期函数的**充要条件**是其在一个周期上的积分为零。
+
+下列函数其原函数必为周期函数的是：（D）
+
+(A).$|sinx|$        (B).$sin^4x$         (C).$\frac{1}{1+sin^2x}$     (D).$\frac{sinx}{1+sin^4x}$
+
+解析：A、B、C选项周期均为π，且在0到π上积分函数不为0，排除；
+
+D选项周期为2π，在-π到π上积分，因为函数为奇函数，对称区间函数积分等于0。
+
+**4.有界性**
+
+1. 定义：若$\exists M>0，\forall x∈I，|f(x)|≤M$，则称f（x）在$I$上**有界**.注
+
+【注】$|sin x|≤1,| cos x|≤1,|arcsin x|≤\frac{\pi}{2},|arctan x|<\frac{\pi}{2},|arccos x|≤π. $
+
+2. 判定：
+
+（1）利用定义
+
+（2）f(x)在[a，b]上连续 ⇒ f(x)在[a，b]上有界
+
+（3）f(x)在(a，b)上连续，且$f(a^+)$和$f(b^-)$存在 ⇒ f(x)在(a，b)上有界
+
+【注】区间（a，b）改为无穷区间（—∞，b），（a，+∞），（—∞，+∞）结论仍成立.
+
+（4）f(x)在区间I（有限）上有界 ⇒ f（x）在I上有界
+
+#### 常考题型的方法与技巧
 
 ## 第二章 一元函数微分学
 
