--- a/大学数学.md
+++ b/大学数学.md
@@ -563,6 +563,12 @@ $$\begin{aligned}&\text{常用的基本极限}\\&\operatorname*{lim}_{x\to0}\fra
 
 $(1)x\sim\sin x\sim\tan x\sim\arcsin x\sim\arctan x\sim\ln(1+x)\sim\mathrm{e}^x-1$,
 $( 1+ x) ^\alpha- 1\sim \alpha x$ , $1- \cos ^\alpha x\sim \frac \alpha 2x^2$ , $a^x- 1\sim x\ln a$
+
+* $当x\to0时,(1+x)^\alpha-1\sim \alpha x,\text{这个结论推广可得},\text{若 }\alpha(x)\to0,\alpha(x)\beta(x)\to0,$
+
+  $则(1+\alpha\left(x\right))^{\beta\left(x\right)}-1\sim\alpha\left(x\right)\beta\left(x\right) 
+  由此可得\left(1+x\right)^{x}-1\sim x^{2}.$
+
 $( 2) x- \sin x\sim \frac {x^3}6$, $\arcsin x- x\sim \frac {x^3}6$, $x- \ln ( 1+ x) \sim \frac {x^2}2$,
 $\tan x- x\sim \frac {x^3}3$, $x- \arctan x\sim \frac {x^3}3.$
 
@@ -660,7 +666,7 @@ $$
 (2)$\displaystyle\sin x=x-\frac{x^{3}}{3!}+\cdots+(-1)^{n-1}\frac{x^{2n-1}}{(2n-1)!}+o(x^{2n-1}).$
 (3)$\displaystyle\cos x=1-\frac{x^{2}}{2!}+\cdots+(-1)^{n}\frac{x^{2n}}{(2n)!}+o(x^{2n}).$ 
 
-(4)$\displaystyle \ln ( 1+ x) = x- \frac {x^{2}}2+ \cdots + ( - 1) ^{n- 1}$ $\frac {x^{n}}n+ o( x^{n}) .$
+(4)$\displaystyle \ln ( 1+ x) = x- \frac {x^{2}}2+ \cdots + ( - 1) ^{n- 1} \frac {x^{n}}n+ o( x^{n}) .$
 
 (5) $\displaystyle( 1+ x) ^{\alpha}= 1+ \alpha x+ \frac {\alpha ( \alpha - 1) }{2! }x^{2}+ \cdotp \cdotp \cdotp + \frac {\alpha ( \alpha - 1) \cdotp \cdotp \cdotp ( \alpha - n+ 1) }{n! }x^{n}+ o( x^{n}) .$
 【例】求极限$\displaystyle \lim_{x\to0}\frac{\frac{x^2}2+1-\sqrt{1+x^2}}{(\cos x-\mathrm{e}^{x^2})\sin^2x}.$
@@ -676,7 +682,7 @@ $$
 
 **方法7 利用定积分的定义求极限**
 
-★变化部分是主体的次量级用夹逼，同量级用定积分定义
+★变化部分的最大值是主体的次量级用夹逼，变化部分的最大值和主体是同量级用定积分定义
 
 ★用定积分求极限，注意提出“**可爱因子**”
 
@@ -711,6 +717,8 @@ $\displaystyle \frac{x_{n+1}}{x_n}=\frac12\Big(1+\frac1{x_n^2}\Big)\leqslant\fra
 则数列$\left\{x_n\right\}$单调减且有下界，故极限$\lim_{n\to\infty} x_n$ 存在。设$\displaystyle\lim_{n\to\infty} x_n=a$,由极限保号性知 $a\geqslant1.$
 
 对等式 $x_{n+1}=\frac12\left(x_n+\frac1{x_n}\right)$两端取极限，得 $a=\frac12\left(a+\frac1a\right)$,又 $a\geqslant1$,由此解得 $a=1$。
+
+★**基本不等式**：
 $$
 \sqrt{\frac{a^2 + b^2}{2}} \geq \frac{a+b}{2} \geq \sqrt{ab} \geq \frac{2}{\frac{1}{a} + \frac{1}{b}}\\
 a^2 + b^2 \geq 2ab\\
@@ -719,12 +727,779 @@ ab \leq \left(\frac{a+b}{2}\right)^2
 $$
 **（二）求极限常见题型**
 
-求函数的极限，常见的是7 种类型不定式，即$\displaystyle \frac00、\frac\infty\infty,\infty-\infty,0\cdot \infty,1^\infty,\infty^0,0^0$，重点是$\frac00$型和$1^\infty$型
+求函数的极限，常见的是7 种类型不定式，即$\displaystyle \frac00、\frac\infty\infty,\infty-\infty,0\cdot \infty,1^\infty,\infty^0,0^0$，重点是$\displaystyle \frac00$型和$1^\infty$型
+
+**1.$\displaystyle \frac00$型极限**
+
+常用的方法有三种：
+
+1. 洛必达法则；
+2. 等价无穷小代换；
+3. 泰勒公式.
+
+​	以上三种方法使用的同时要注意将原式化简，常用的方法有**极限非零的因子极限先求出来、有理化及变量代换**等，此外，如果有两个形式相同函数还可以借助**拉格朗日中值定理**化简。
+
+**2.“$\displaystyle \frac{\infty}{\infty}$”型极限**
+
+常用的方法有两种：
+
+1. 洛必达法则；
+
+2. 分子分母同除以分子和分母各项中最高阶的无穷大。
+
+**3.“$\infty-\infty$”型极限**
+
+常用的方法有：
+
+(1)通分化为$\displaystyle \frac00$(适用于分式差);
+
+(2)根式有理化(适用于根式差);
+
+(3)提无穷因子，然后等价代换或变量代换、泰勒公式。
+
+**4.“$0·\infty$”型极限**
+
+常用的方法：
+
+利用恒等变换、无穷小替换（乘除可以随便换）化为“$\frac00$”型或“$\frac\infty\infty$”型
+
+**5.“$1^\infty$”型极限**
+
+常用的方法有三种：
+
+* (1)凑基本极限   $\lim[1+\varphi(x)]^{\frac1{\varphi(x)}}=$e,其中$\lim\varphi(x)=0(\varphi(x)\neq0);$
+* (2)改写成指数 $\lim [ f( x) ] ^{g( x) }= \lim \mathrm{e} ^{g( x) \ln f( x) }$,用洛必达法则；
+* (3)利用结论：若$\lim\alpha(x)=0,\lim\beta(x)=\infty$,且$\lim\alpha(x)\beta(x)=A$,则
+  $$\lim[1+\alpha(x)]^{\beta(x)}=\mathrm{e}^A$$
+  以上三种方法往往第三种方法简单，将其归纳为三步.
+  第一步：写标准型   原式$=\operatorname{lim}(1+\alpha)^\beta;$
+  第二步：求极限   $\lim{\alpha\beta}=A;$
+  第三步：写结果   原式$=\mathrm{e}^A.$
+
+**6.“$\infty^0$”和“$0^\infin$”型极限**
+
+​	这两种极限的函数一定是**幂指函数**，即$\lim[f(x)]^{g(x)}.$求解的方法是将其**改写成指数形式**
+$\lim[f(x)^{\cdot}]^{g(x)}=\lim\mathrm{e}^{g(x)\ln f(x)}$,从而就化为“0$\cdot\infty$”型极限.
+
+**数列的极限**
+
+常见的数列极限有以下4种.
+
+**1.不定式**
+
+求数列不定式极限和求函数不定式极限的方法完全相同，但对数列极限<u>不能直接用洛必达法则</u>，可以改写成函数形式再用洛必达法则。
+
+**2.n项和的数列极限**
+
+常用方法（1）夹逼原理；（2）定积分定义；（3）级数求和；
+
+重要结论：
+
+$\begin{aligned}
+ & \text{令}\max_{1\leqslant i\leqslant m}\{ a_i\}=a,\text{则} \\
+ & a=\sqrt[n]{a^n}\leqslant\sqrt[n]{a^n+a_2^n+\cdots+a_m^n}\leqslant\sqrt[n]{ma^n}=\sqrt[n]{ma}. \\
+ & \text{又}\lim_{n\to\infty}\sqrt[n]{m}=1,\text{则由夹逼原理知} \\
+ & \lim_{n\to\infty}\sqrt[n]{a_{1}^{n}+a_{2}^{n}+\cdots+a_{m}^{n}}=a=\max_{1\leqslant i\leqslant m}\{ a_{i}\}.
+\end{aligned}$
+
+**3.n项连乘的数列极限**
+
+常用方法（1）夹逼原理；（2）取对数化为n项和.
+
+**4.递推关系$x_1=a,x_{n+1}=f(x_n)(n=1,2,\cdotp\cdotp\cdotp$)定义的数列**
+
+常用方法
+
+* 方法 1:先证数列 $\{x_n\}$收敛(常用单调有界准则),然后令$\displaystyle \lim_{n\to\infty}x_n=A$,等式 $x_{n+1}=f(x_n)$ 两端
+  取极限得 $A=f(A)$,由此求得极限 $A.$
+* 方法 2:先令$\displaystyle \lim_{n\to\infty} x_n=A$,然后等式 $x_{n+1}=f(x_n$)两端取极限解得$A$,得到极限初步结果，最后
+  再证明$\displaystyle \lim_{n\to\infty} x_n=A.$
+  一般来说，当数列$\left\{x_n\right\}$具有单调性时用方法 1,而当数列$\left\{x_n\right\}$不具有单调性或单调性很难
+  判定时用方法 2.
+
+​	方法二的关键是证明$\displaystyle \lim_{n\to\infty} x_n=a$。一般地，当数列$\left\{x_n\right\}$由递推关系$x_n=f(x_{n-1})$ 给出，要证明$\displaystyle \lim_{n\to\infty}x_n=a.$其核心是利用 $x_n=f(x_{n-1})$ 证明一个递推不等式
+$$
+|x_{n}-a|\leqslant A|x_{n-1}-a|(0<A<1)
+$$
+单调性判定常用有三种方法：
+(1)若$x_{n+1}-x_n\geqslant0(\leqslant0)$,则$\{x_n\}$单调增(单调减);
+(2)设$\{x_n\}$不变号，
+①若$x_n>0$,则当$\frac{x_{n+1}}{x_n}\geqslant1(\leqslant1)$ 时，$\{x_n\}$ 单调增(单调减);
+
+②若$x_n<0$,则当$\frac {x_{n+1}}{x_n}\geqslant1(\leqslant1)$ 时$,\{x_n\}$ 单调减(单调增); 
+
+(3)设数列{$x_n$}由$x_1=a,x_{n+1}=f(x_n)(n=1,2,\cdotp\cdotp\cdotp),x_n\in I$所确定，
+①若$f(x)$在 $I$ 上单调增，则
+当$x_1\leqslant x_2$ 时，$\{x_n\}$单调增；当 $x_1\geqslant x_2$ 时，$\{x_n\}$单调减；
+②若 $f(x)$ 在 $I$ 上单调减，则$\left\{x_n\right\}$**不单调**。
+
+##### 题型三 确定极限式中的参数
+
+对比分析各个部分，找到常数的合法取值使得极限式的极限存在。
+
+部分容易求出的常数可以先求出，再解决其他常数的求值问题。
+
+##### 题型四 无穷小量阶的比较
+
+​	由无穷小量阶的定义可知，比较两个无穷小阶的问题就是求$\displaystyle \frac{0}{0}$型极限，所以常用的方法就
+
+是求$\displaystyle \frac00$型极限的常用三种方法.
+
+* (1)洛必达法则(求导定阶).
+
+​	若当$x\to$0 时$f(x)$是无穷小量，且$f^\prime(x)$是$x$的$k(k\geqslant0)$阶无穷小，则$f(x)$是$x\to$0 时的 $k+1$ 阶无穷小量.
+
+* (2)等价无穷小代换.
+
+​	若当$x\to0$时$f(x)$是无穷小量，且$f(x)\sim Ax^k(A\neq0,k>0)$,则$f(x)$是$x\to0$时的 $k$ 阶无穷小量.
+
+​	如当 $x\to0$ 时，(1-$\cos x)\sin x\sim\frac12x^2· x$,则当$x\to0$ 时，(1-$\cos x)\sin x$ 是$x$ 的 3 阶无穷小.
+
+* (3)泰勒公式.
+
+### 第三节 连续
+
+#### （一）连续的概念
+
+若$\displaystyle \lim_{x\to x_0}f(x)=f(x_{0})$(或$\displaystyle \lim_{\Delta x\to0}\Delta y=0$),则称$f(x)$在$x_0$处**连续**
+左、右连续概念：若$\displaystyle \lim_{x\to x_0^-}f(x)=f(x_0)$,则称 $f(x)$ 在 $x_0$ 处**左连续**
+				若 $\displaystyle \lim_{x\to x_0^+}f(x)=f(x_0)$,则称 $f(x)$ 在 $x_0$ 处**右连续**
+**定理**
+
+*  $f(x)$ 连续$\Leftrightarrow f(x)$**左连续且右连续**.
+
+
+#### （二）间断点及其类型
+
+**1.间断点的概念**
+
+若$f(x)$在$x_0$某去心邻域有定义，但在$x_0$处不连续，则称点$x=x_0$为函数$f(x)$的间断点
+
+**2.间断点的分类**
+
+我们根据左、右极限是否都存在把间断点分为以下两类：
+(1)**第一类间断点**：左、右极限均存在的间断点
+
+* **可去间断点**：左、右极限存在且相等的间断点；
+
+* **跳跃间断点**：左、右极限都存在但不相等的间断点.
+
+(2)**第二类问断点**：左、右极限中至少有一个不存在的间断点
+
+* **无穷间断点**：左、右极限中至少有一个为无穷，如$x=0$为$f(x)=\frac1x$的无穷间断点；
+* **振荡间断点**：极限不存在，也不为无穷，如$x=0$为$f(x)=\sin\frac1x$的振荡间断点.
+
+#### （三）连续函数的性质
+
+(1)连续函数的和、差、积、商(分母不为零)及复合仍连续；
+(2)基本初等函数在其定义域内连续；初等函数在其定义区间内连续，
+(3)闭区间上连续函数的性质
+①**有界性**：若 $f(x)$ 在$[a,b]$上连续，则 $f(x)$ 在$[a,b]$ 上有界.
+②**最值性**：若$f(x)$在$[a,b]$上连续，则$f(x)$在$[a,b]$上必有最大值和最小值.
+③**介值性**：若 $f(x)$ 在$[a,b]$上连续，且 $f(a)\neq f(b)$,则对 $f(a)$ 与 $f(b)$ 之间任一数 $C$,至少存在一个$\xi\in(a,b)$,使得 $f(\xi)=C.$
+**推论** 若 $f(x)$ 在$[a,b]$ 上连续，则 $f(x)$ 在$[a,b]$可取到介于最小值 $m$ 与最大值$M$ 之间的任何值.
+(4)**零点定理**：若$f(x)$在[$a,b]$连续，且$f(a)·f(b)<0$,则必存在$\xi\in(a,b)$,使$f(\xi)=0.$
+
+#### （★）常考题型的方法与技巧
+
+##### 题型一 讨论连续性及间断点类型
+
+一般是由定义来做，有时候会结合复合函数考察间断点情况。
+
+★关键在于考察可疑点：无定义点、定义域分界点、分段函数分界点等等
+
+##### 题型二 介值定理、最值定理及零点定理的证明题
 
 
 
 ## 第二章 一元函数微分学
 
+### 第一节 导数与微分
+
+#### （一）导数概念
+
+**定义**(导数)设函数 y$=f(x)$在$x_0$的某邻域内有定义，如果极限
+$$
+\lim\limits_{\Delta x\to0}\frac{\Delta y}{\Delta x}=\lim\limits_{\Delta x\to0}\frac{f(x_0+\Delta x)-f(x_0)}{\Delta x}
+$$
+存在，则称$f(x)$**在点$x_0$处可导，**并称此极限值为$f(x$)**在点$x_0$处的导数**，记为$f^\prime(x_0)$，或$y^{\prime}|_{x=x_0}$,或$\left.\frac{\mathrm{d}y}{\mathrm{d}x}\right|_{x=x_0}.$如果上述极限不存在，则称 $f(x)$ **在点 $x_0$ 处不可导**。
+
+* 常用的导数定义的等价形式有：
+
+$$
+f'(x_0)=\lim_{x\to x_0}\frac{f(x)-f(x_0)}{x-x_0},\quad f'(x_0)=\lim_{h\to0}\frac{f(x_0+h)-f(x_0)}{h}\:.
+$$
+
+**定义**(左导数)若左极限
+$$
+\lim\limits_{\Delta x\to0^-}\frac{\Delta y}{\Delta x}=\lim\limits_{\Delta x\to0^-}\frac{f(x_0+\Delta x)-f(x_0)}{\Delta x}=\lim\limits_{x\to x_0^-}\frac{f(x)-f(x_0)}{x-x_0}
+$$
+存在时，则称该极限值为$f(x$)在点$x_0$处的**左导数**，记为$f_-^\prime(x_0).$
+**定义**(右导数)若右极限
+$$
+\lim\limits_{\Delta x\to0^+}\frac{\Delta y}{\Delta x}=\lim\limits_{\Delta x\to0^+}\frac{f(x_0+\Delta x)-f(x_0)}{\Delta x}=\lim\limits_{x\to x_0^+}\frac{f(x)-f(x_0)}{x-x_0}
+$$
+存在时，则称该极限值为$f(x$)在点$x_0$处的**右导数**，记为$f_+^\prime(x_0).$
+**定理** 
+
+* **可导$\Leftrightarrow$左、右导数都存在且相等**
+
+#### (二)微分概念
+
+**定义** 
+
+* 若$\Delta y=f(x_0+\Delta x)-f(x_0)=A\Delta x+o(\Delta x)$,其中$A$为不依赖于$\Delta x$的常数，则称函数$f(x$)**在点$x_0$处可微**，称$A\Delta x$为函数$f(x$)在点$x_0$处相应于自变量增量$\Delta x$的**微分**，记为 dy= $A\Delta x.$
+  **定理** 函数$y=f(x)$在点$x_0$处可微的充分必要条件是$f(x)$在点$x_0$处可导，且有
+  $$\mathrm{d}y=f'(x_0)\Delta x=f'(x_0)\mathrm{d}x.$$
+
+
+#### (三)导数与微分的几何意义
+
+(1)导数 $f^\prime(x_0$)在几何上表示曲线 $y=f(x)$ 在点$(x_0,f(x_0))$ 处切线的斜率.
+
+(2)微分$\mathrm{d}y=f^{\prime}(x_0)\mathrm{d}x$ 在几何上表示曲线 $y=f(x)$的切线上的增量.
+ $\Delta y=f(x_0+\Delta x)-f(x_0)$在几何上表示曲线 $y=f(x)$上的增量.$\Delta y\approx\mathrm{d}y.$
+
+![2.1.3 微分的几何意义](文档插图/2.1.3 微分的几何意义.png)
+
+<center style="color:#C0C0C0">图2.1.3 微分的几何意义</center>
+
+#### (四)连续、可导、可微之间的关系
+
+![2.1.4 连续、可导、可微的关系](文档插图/2.1.4 连续、可导、可微的关系.png)
+
+<center style="color:#C0C0C0">图2.1.4 连续、可导、可微的关系</center>
+
+* (1)连续$\nRightarrow$可导，连续$\nRightarrow$可微，经典反例为 $f(x)=\mid x\mid;$
+
+* $(2)f(x)$ 可导$\Rightarrow$$f(x)$ 连续$,f(x)$ 可导$\nRightarrow$ $f^\prime(x)$ 连续$,f(x)$ 可导$\displaystyle \nRightarrow\lim_{x\to x_0}f^{\prime}(x)$ 存在.（可导必连续，但可导不能保证导函数连续，甚至不能保证导函数在该点的极限存在）
+
+​	例如 $f(x)=\begin{cases}x^2\sin\frac1x,&x\neq0\\0,&x=0\end{cases}$ 处处可导，但$\displaystyle \lim_{x\to0}f^{\prime}(x)$ 不存在，从而 $f^\prime(x)$ 在 $x=0$ 处也不连续.
+
+#### （五）求导公式
+
+$\begin{aligned}
+ & (1)(C)^{\prime}=0; & & (2)\left(x^{\alpha}\right)^{\prime}=\alpha x^{\alpha-1}; \\
+ & \left(3\right)\left(a^{x}\right)^{\prime}=a^{x}\ln a; & & \left(4\right)\left(\mathrm{e}^{x}\right)^{\prime}=\mathrm{e}^{x}; \\
+ & (5)\left(\log_{a}x\right)^{\prime}=\frac{1}{x\ln a}; & & (6)(\ln\mid x\mid)^{\prime}=\frac{1}{x}; \\
+ & (7)(\sin x)^{\prime}=\cos x; & & (8)\left(\cos x\right)^{\prime}=-\sin x; \\
+ & (9)(\tan x)^{\prime}=\sec^{2}x; & & (10)\left(\cot x\right)^{\prime}=-\csc^{2}x; \\
+ & (11)\left(\sec x\right)^{\prime}=\sec x\tan x; & & (12)\left(\csc x\right)^{\prime}=-\csc x\cot x; \\
+ & (13)(\arcsin x)^{\prime}=\frac{1}{\sqrt{1-x^{2}}}; & & (14)(\arccos x)^{^{\prime}}=-\frac{1}{\sqrt{1-x^{2}}}; \\
+ & \left(15\right)\left(\arctan x\right)^{\prime}=\frac{1}{1+x^{2}}; & & \left(16\right)\left(\operatorname{arccot}x\right)^{\prime}=-\frac{1}{1+x^{2}}.
+\end{aligned}$
+
+##### （六）求导法则
+
+**1. 有理运算法则**
+
+设 $u=u(x),v=v(x)$ 在 $x$ 处可导，则
+$(1)(u\pm v)^{\prime}=u^{\prime}\pm v^{\prime};$
+
+$(2)(uv)'=u'v+uv';$
+
+$(3)\displaystyle \left(\frac uv\right)'=\frac{u'v-uv'}{v^2}(v\neq0).$
+
+**2. 复合函数求导法**
+
+设$u=\varphi(x)$ 在 $x$ 处可导$,y=f(u)$ 在对应点处可导，则复合函数 $y=f(\varphi(x))$ 在$x$ 处可导，且
+
+$$
+\frac{\mathrm{d}y}{\mathrm{d}x}=\frac{\mathrm{d}y}{\mathrm{d}u}·\frac{\mathrm{d}u}{\mathrm{d}x}=f'(u)\varphi'(x).
+$$
+**3. 隐函数求导法**
+
+设$y=y(x)$是由方程$F(x,y)=0$所确定的可导函数，为求得$y^\prime$,可在方程$F(x,y)=0$两边对$x$求导，可得到一个含有$y^{\prime}$的方程，从中解出$y^{\prime}$即可.
+
+* 注：$y^{\prime}$也可由多元函数微分法中的隐函数求导公式$\displaystyle \frac{dy}{dx}=-\frac{F_x^{\prime}}{F_y^{\prime}}$得到
+
+**4.反函数的导数**
+若$x=\varphi(y)$在某区间内单调、可导，且$\varphi^\prime(y)\neq0$,则其反函数$y=f(x)$在对应区间内也可导，且
+$$
+f'(x)=\frac{1}{\varphi'(y)}\text{或}\frac{\mathrm{d}y}{\mathrm{d}x}=\frac{1}{\frac{\mathrm{d}x}{\mathrm{d}y}}.
+$$
+**5. 参数方程求导法**
+
+设$y=y(x)$是由参数方程$\begin{cases} x= \varphi ( t) \\ y= \psi ( t) & \end{cases}$ $( \alpha < t< \beta )$确定的函数，则
+
+(1)若$\varphi(t)$和$\psi(t)$都可导，且$\varphi^\prime(t)\neq0$,则
+
+$$
+\frac{\mathrm{d}y}{\mathrm{d}x}=\frac{\psi^{'}(t)}{\varphi^{'}(t)}.
+$$
+(2)若$\varphi(t)$ 和$\psi(t)$ 二阶可导，且$\varphi^\prime(t)\neq0$,则
+
+$$
+\frac{\mathrm{d}^2y}{\mathrm{d}x^2}=\frac{\mathrm{d}}{\mathrm{d}t}\Big(\frac{\psi'(t)}{\varphi'(t)}\Big)·\frac{1}{\varphi'(t)}=\frac{\psi''(t)\varphi'(t)-\varphi''(t)\psi'(t)}{\varphi'^3(t)}.
+$$
+**6. 对数求导法**
+
+如果$y=y(x)$的表达式由多个因式的乘除、乘幂构成，或是幂指函数的形式，则可先将函数取对数，然后两边对 $x$ 求导.
+**7.高阶导数**
+
+**定义**
+$$
+f^{(n)}(x_{0})=\lim_{\Delta x\to0}\frac{f^{(n-1)}(x_{0}+\Delta x)-f^{(n-1)}(x_{0})}{\Delta x}=\lim_{x\to x_{0}}\frac{f^{(n-1)}(x)-f^{(n-1)}(x_{0})}{x-x_{0}}
+$$
+**常用公式**
+
+$①(\sin x)^{(n)}=\sin(x+\frac{n\pi}2);$ $②( \cos x) ^{( n) }= \cos ( x+ \frac {n\pi }2)$ ;
+
+$③(u\pm v)^{(n)}=u^{(n)}\pm v^{(n)};$ $④( uv) ^{( n) }$ = $\displaystyle \sum _{k= 0}^{n}C _{n}^{k}u^{( k) }$ $v^{( n- k) }$ .
+
+#### （★）常考题型的方法与技巧
+
+##### 题型一 导数与微分的概念 
+
+这里的重点是导数的概念，其题型主要有三种：
+
+（1）利用导数定义求极限；（2）利用导数定义求导数；
+
+（3）利用导数定义判断函数的可导性.
+
+**（一）利用导数定义求极限**
+
+* 遇到函数自变量表达式不为 $x$ 的情况，可以通过恒等变换（加项减项拆）将整个表达式视为 $x$，凑成类似导数定义的极限形式，然后再利用导数定义求极限。
+
+**（二）利用导数定义求导数**
+
+* 可以将复杂函数视为一个简单函数和一个抽象复合函数运算来求导化简
+* 分段函数的分界点处导数一般都要用定义求；注意，表达式如果是闭区间的那半，求完导后那一半的**左or右极限**可以通过直接代入法求得，而不需要利用定义求。开区间那半边则一定要用定义求左右极限。
+
+**（三）利用导数定义判断可导性**
+
+* 一条常用的结论：设$f(x)=\varphi(x)\left|x-a\right|$,其$\varphi(x)$在$x=a$处连续，则$f\left(x\right)$在$x=a$处可导的充要条件是$\varphi\left(a\right)=0.$
+
+* 函数 $f\left ( x\right )$和$\left|f\left(x\right)\right|$可导性之间的关系归纳如下：
+
+  $1.f(x)$可导$\nLeftrightarrow|f(x)|$可导.反例分别是 $f(x)=x$ 和 $f(x)=\begin{cases}-1,&x<0\\1,&x\geqslant0.\end{cases}$
+
+  2.设$f\left(x\right)$连续,
+
+  若 $f\left(x_0\right)\neq0$,则$\left|f\left(x\right)\right|$在 $x_0$ 处可导$\Leftrightarrow f\left(x\right)$ 在 $x_0$ 处可导；
+  若 $f\left(x_0\right)=0$,则$\left|f\left(x\right)\right|$在 $x_0$ 处可导$\Leftrightarrow f^\prime\left(x_0\right)=0.$
+
+##### 题型二 导数的几何意义
+
+* 若两曲线相切，则在切点处函数值相等且导数值相等。
+* 
+
+##### 题型三 导数与微分的计算
+
+**（一）复合函数求导法**
+
+* 注意利用奇函数求导为偶函数，偶函数求导为奇函数这一性质，以及奇函数性质
+
+* 设$y=f(u),u=g(x),u_0=g(x_0)$,如果$g^\prime(x_0)$和$f^\prime(u_0)$都存在，则$y=f(g(x))$在$x_0$处可导，且$\left.\frac{\mathrm{d}y}{\mathrm{d}x}\right|_{x=x_0}=f^{\prime}(u_0)· g^{\prime}(x_0);$如果$g^\prime(x_0)$和$f^\prime(u_0)$至少有一个不存在，则$y=f(g(x))$在$x_0$处**并非一定不可导**，此时，先求出复合函数$y=f(g(x))$的表达式，然后再进一步考查$y=f\left(g\left(x\right)\right)$在$x_{0}$处的可导性.
+
+* 如果求极限函数在任何去心邻域都有没定义的点，比如$\displaystyle \lim_{x\to0}\frac{f\left(x^{3}\sin\frac{1}{x}\right)-f\left(0\right)}{x^{3}\sin\frac{1}{x}}$，则极限不存在，不能随意用导数定义求极限。
+
+**（二）隐函数求导法**
+
+* 注意求导过程中，$y'、y''$仍然是 $x$ 的函数。
+* 注意**利用原方程化简**。
+
+**（三）参数方程求导法**
+
+**公式**：
+$$
+\frac{\mathrm{d}y}{\mathrm{d}x}=\frac{y^\prime(t)}{x^\prime(t)}\\\quad\frac{\mathrm{d}^{2}y}{\mathrm{d}x^{2}}=\frac{y^{\prime\prime}(t)x^{\prime}(t)-x^{\prime\prime}(t)y^{\prime}(t)}{x^{{\prime}3}(t)}
+$$
+**方法**：一阶导数代公式，二阶导数利用下式计算
+$$
+\frac{\mathrm{d}^{2}y}{\mathrm{d}x^{2}}=\frac{\mathrm{d}}{\mathrm{d}t}\left(\frac{y^{\prime}(t)}{x^{\prime}(t)}\right)\frac{1}{x^\prime(t)}
+$$
+
+* 很复杂的题有可能直接带二阶导公式更简便，一般情况是利用链式法则推导。
+
+**（四）反函数求导法**
+
+* 一般情况是利用链式法则推导，要注意：
+
+$$
+\frac{dx}{dy}=\frac{1}{\frac{dy}{dx}},但\frac{d^{2}x}{dy^{2}}\neq\frac{1}{\frac{d^{2}y}{dx^{2}}}
+$$
+
+**(五)对数求导法**
+
+* 对于幂指函数，连乘、连除，开方、乘方等形式的函数一般采用对数求导法.
+
+**(六)高阶导数**
+**常用方法**
+
+* (1)代公式；
+
+* (2)求一阶$y^\prime$、二阶$y^{\prime\prime}$，归纳 $n$ 阶导数$y^{(n)};$
+
+* (3)利用泰勒级数(或泰勒公式):
+
+①泰勒级数
+
+$$
+f(x)=\sum_{n=0}^\infty\frac{f^{(n)}(x_0)}{n!}(x-x_0)^n.
+$$
+②泰勒公式
+
+$$
+f(x)=f(x_0)+f'(x_0)(x-x_0)+\frac{f''(x_0)}{2!}(x-x_0)^2+\cdots+\frac{f^{(n)}(x_0)}{n!}(x-x_0)^n+o((x-x_0)^n).
+$$
+
+### 第二节 导数应用
+
+#### （一）微分中值定理
+
+* **罗尔定理**：设 $f(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导, 且 $f(a)=f(b)$, 那么至少存在一个 $\xi \in$ $(a, b)$, 使 $f^{\prime}(\xi)=0$ 。
+
+* **拉格朗日定理**：设 $f(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导, 那么至少存在一个 $\xi \in(a, b)$, 使 $\displaystyle \frac{f(b)-f(a)}{b-a}=f^{\prime}(\xi)$.
+
+* **柯西定理**：设 $f(x), g(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导, 且 $g^{\prime}(x) \neq 0$, 那么至少存在一个 $\xi$ $\in(a, b)$, 使 $\displaystyle\frac{f(b)-f(a)}{g(b)-g(a)}=\frac{f^{\prime}(\xi)}{g^{\prime}(\xi)}$.
+
+* **泰勒定理（拉格朗日余项）**：
+  设 $f(x)$ 在区间 $I$ 上 $n+1$ 阶可导, $x_0 \in I$, 那么 $\forall x \in I$, 至少存在一个 $\xi$ 使得
+
+$$
+f(x)=f\left(x_0\right)+f^{\prime}\left(x_0\right)\left(x-x_0\right)+\frac{f^{\prime \prime}\left(x_0\right)}{2!}\left(x-x_0\right)^2+\cdots+\frac{f^{(n)}\left(x_0\right)}{n!}\left(x-x_0\right)^n+R_n(x),
+$$
+
+其中 $\displaystyle R_n(x)=\frac{f^{(n+1)}(\xi)}{(n+1)!}\left(x-x_0\right)^{n+1}, \xi$ 在 $x_0$ 与 $x$ 之间.
+
+* (1) 以上四大中值定理，特别是拉格朗日中值定理建立了**函数在区间上的变化（改变量）与函数在该区间内一点处导数的关系**，从而使我们能够利用导数来研究函数在区间上的**整体性态**。
+* (2) 四大中值定理的关系如下:
+
+![2.2.1 四大中值定理的关系](文档插图/2.2.1 四大中值定理的关系.png)
+
+<center style="color:#C0C0C0">图2.2.1 四大中值定理的关系</center>
+
+#### （二)极值与最值
+
+**1.极值的概念**
+
+设 $y=f(x)$ 在点 $x_0$ 的某邻域内有定义, 如果对于该邻域内任何 $x$, 恒有 $f(x) \leqslant f\left(x_0\right)$ （或 $f(x) \geqslant f\left(x_0\right)$ ), 则称 $x_0$ 为 $f(x)$ 的一个**极大值点** (或**极小值点**), 称 $f\left(x_0\right)$ 为 $f(x)$ 的**极大值** (或**极小值**). 极大 (小) 值统称为**极值**, 极大 (小) 值点统称为**极值点**.
+
+* (1) 函数在区间 $[a, b]$ 上的极值只能在开区间 $(a, b)$ 上取得; 端点 $x=a, x=b$ 处不可能取得极值。
+* (2) 若函数在闭区间 $[a, b]$ 上的最大值（或最小值）在开区间 $(a, b)$ 上某点取得，那么，函数在该点处必取得极大值 (或极小值)。
+
+**2.极值的必要条件**
+
+设 $y=f(x)$ 在点 $x_0$ 处可导, 且 $x_0$ 为 $f(x)$ 的极值点, 则 $f^{\prime}\left(x_0\right)=0$.
+通常把导数为零的点称为函数的**驻点**. 由极值的必要性可知, 对可导函数而言, 极值只可能在驻点上取得, 极值点必为驻点, 但驻点并不一定是极值点. 而对一般函数而言, 极值只可能在两种点上取得, 这两种点是驻点和导数不存在的点, 而要判断在这两种点上是否一定取得极值需利用下列充分条件.
+
+**3.极值的充分条件**
+(1) 第一充分条件
+
+设 $f^{\prime}\left(x_0\right)=0$ (或 $f(x)$ 在 $x_0$ 处连续)，且在 $x_0$ 的某去心邻域 $\mathring{U}\left(x_0, \delta\right)$ 内可导.
+① 若 $x \in\left(x_0-\delta, x_0\right)$ 时, $f^{\prime}(x)>0$, 而 $x \in\left(x_0, x_0+\delta\right)$ 时, $f^{\prime}(x)<0$, 则 $f(x)$ 在 $x_0$ 处取得极大值；
+② 若 $x \in\left(x_0-\delta, x_0\right)$ 时, $f^{\prime}(x)<0$, 而 $x \in\left(x_0, x_0+\delta\right)$ 时, $f^{\prime}(x)>0$, 则 $f(x)$ 在 $x_0$ 处取得极小值；
+③ 若 $x \in \mathring{U}\left(x_0, \delta\right)$ 时, $f^{\prime}(x)$ 的符号保持不变,则 $f(x)$ 在 $x_0$ 处没有极值.
+(2)第二充分条件
+若 $f^{\prime}\left(x_0\right)=0, f^{\prime \prime}\left(x_0\right) \neq 0$, 则 $f(x)$ 在 $x_0$ 处取得极值, 其中当 $f^{\prime \prime}\left(x_0\right)>0$ 时取得极小值, 当 $f^{\prime \prime}\left(x_0\right)<0$ 时取得极大值.
+(3) 第三充分条件
+
+若 $f^{\prime}\left(x_0\right)=f^{\prime \prime}\left(x_0\right)=\cdots=f^{(n-1)}\left(x_0\right)=0, f^{(n)}\left(x_0\right) \neq 0$ ，则
+当 $n$ 为偶数时, $f(x)$ 在 $x_0$ 处有极值, 其中 $f^{(n)}\left(x_0\right)>0$ 时取得极小值, $f^{(n)}\left(x_0\right)<0$ 时取得极大值；
+
+当 $n$ 为奇数时, $f(x)$ 在 $x_0$ 处无极值.
+
+**4.函数的最值**
+
+连续函数 $f(x)$ 在 $[a, b]$ 上的最值的求法.
+第一步：求出 $f(x)$ 在开区间 $(a, b)$ 内的驻点和不可导的点 $x_1, x_2, \cdots, x_n$;
+第二步: 求出 $f(x)$ 在点 $x_1, x_2, \cdots, x_n$ 和区间端点 $a, b$ 处的函数值 $f\left(x_1\right), f\left(x_2\right), \cdots, f\left(x_n\right), f(a)$, $f(b)$ ；
+
+第三步: 比较以上各点函数值, 其中最大的即为 $f(x)$ 在 $[a, b]$ 上的最大值, 最小的即为 $f(x)$在 $[a, b]$ 上的最小值.
+
+* 当闭区间 $[a, b]$ 上的连续函数 $f(x)$ 在 $(a, b)$ 内仅有唯一极值点, 若在该点 $f(x)$ 取得极大值 (或极小值), 则它也是 $f(x)$ 在 $[a, b]$ 上的最大值 (或最小值).
+
+#### （三） 曲线的凹向与拐点
+
+**1.曲线的凹向**
+
+**定义**：设 $f(x)$ 在区间 $I$ 上连续, 如果对 $I$ 上任意两点 $x_1, x_2$, 恒有
+$$
+f\left(\frac{x_1+x_2}{2}\right)<\frac{f\left(x_1\right)+f\left(x_2\right)}{2},
+$$
+
+则称 $f(x)$ 在 $I$ 上的图形是凹的; 如果恒有
+$$
+f\left(\frac{x_1+x_2}{2}\right)>\frac{f\left(x_1\right)+f\left(x_2\right)}{2},
+$$
+
+则称 $f(x)$ 在 $I$ 上的图形是凸的.
+**判定**：若在区间 $I$ 上 $f^{\prime \prime}(x)>0(<0)$ ，则曲线 $y=f(x)$ 在 $I$ 上是凹（凸）的。
+
+**2.曲线的拐点**
+
+**定义**：如果连续曲线 $y=f(x)$ 在点 $\left(x_0, f\left(x_0\right)\right)$ 邻近两侧凹凸性相反, 则称点 $\left(x_0, f\left(x_0\right)\right)$ 为曲线 $y=f(x)$ 的**拐点**。
+
+**判定**
+
+* (1)必要条件
+  设 $y=f(x)$ 在点 $x_0$ 处二阶可导, 且点 $\left(x_0, f\left(x_0\right)\right)$ 为曲线 $y=f(x)$ 的拐点, 则 $f^{\prime \prime}\left(x_0\right)=0$.
+* (2)第一充分条件
+  设 $y=f(x)$ 在点 $x_0$ 的某去心邻域内二阶可导，且 $f^{\prime \prime}\left(x_0\right)=0$ （或 $f(x)$ 在 $x_0$ 处连续）。
+  ① 若 $f^{\prime \prime}(x)$ 在 $x_0$ 的左、右两侧异号，则点 $\left(x_0, f\left(x_0\right)\right)$ 是曲线 $y=f(x)$ 的拐点；
+  ② 若 $f^{\prime \prime}(x)$ 在 $x_0$ 的左、右两侧同号，则点 $\left(x_0, f\left(x_0\right)\right)$ 不是曲线 $y=f(x)$ 的拐点。
+* (3)第二充分条件
+  设 $y=f(x)$ 在点 $x_0$ 处三阶可导，且 $f^{\prime \prime}\left(x_0\right)=0$ 。
+  ① 若 $f^{\prime \prime \prime}\left(x_0\right) \neq 0$, 则点 $\left(x_0, f\left(x_0\right)\right)$ 是曲线 $y=f(x)$ 的拐点;
+  ② 若 $f^{\prime \prime \prime}\left(x_0\right)=0$, 则此方法不能判定 $\left(x_0, f\left(x_0\right)\right)$ 是否为曲线 $y=f(x)$ 的拐点.
+* (4) 第三充分条件
+
+​	若 $f^{\prime \prime}\left(x_0\right)=f^{\prime \prime \prime}\left(x_0\right)=\cdots=f^{(n-1)}\left(x_0\right)=0$, 但 $f^{(n)}\left(x_0\right) \neq 0(n \geqslant 3)$, 则当 $n$ 为奇数时, 点 $\left(x_0\right.$, $\left.f\left(x_0\right)\right)$ 是曲线 $y=f(x)$ 的拐点, 当 $n$ 为偶数时, 点 $\left(x_0, f\left(x_0\right)\right)$ 不是曲线 $y=f(x)$ 的拐点.
+
+* 将极值点的必要条件和充分条件中的导数阶数**提高一阶**便是拐点的一个必要条件和三个充分条件。
+
+#### （四） 曲线的渐近线
+
+**1.水平渐近线**
+
+若 $\displaystyle\lim _{x \rightarrow \infty} f(x)=A$ (或 $\displaystyle\lim _{x \rightarrow-\infty} f(x)=A$, 或 $\lim _{x \rightarrow+\infty} f(x)=A$ ), 那么 $y=A$ 是 $y=f(x)$ 的水平渐近线.
+
+**2.铅直渐近线**
+
+若 $\displaystyle\lim _{x \rightarrow x_0} f(x)=\infty$ (或 $\displaystyle\lim _{x \rightarrow x_0^{-}} f(x)=\infty$, 或 $\displaystyle\lim _{x \rightarrow x_0^{+}} f(x)=\infty )$, 那么 $x=x_0$ 是 $y=f(x)$ 的铅直渐近线.
+
+**3.斜渐近线**
+
+若 $\displaystyle\lim _{x \rightarrow \infty} \frac{f(x)}{x}=a, \lim _{x \rightarrow \infty}(f(x)-a x)=b$ (或 $x \rightarrow-\infty$ 或 $x \rightarrow+\infty$ ), 那么 $y=a x+b$ 是 $y=f(x)$的斜渐近线。
+
+#### （五）平面曲线的曲率 
+
+**1.曲率的定义**
+$$
+K=\lim _{\Delta s \rightarrow 0}\left|\frac{\Delta \alpha}{\Delta s}\right| .
+$$
+**2.曲率的计算**
+（1）若曲线由直角坐标方程 $y=y(x)$ 给出，则
+$$
+K=\frac{\left|y^{\prime \prime}\right|}{\left(1+y^{\prime 2}\right)^{\frac{3}{2}}}
+$$
+（2）若曲线由参数方程 $\left\{\begin{array}{l}x=x(t) \\ y=y(t)\end{array}\right.$ 给出，则
+$$
+K=\frac{\left|y^{\prime \prime} x^{\prime}-y^{\prime} x^{\prime \prime}\right|}{\left(x^{\prime 2}+y^{\prime 2}\right)^{\frac{3}{2}}} .
+$$
+**3.曲率圆与曲率半径**
+
+曲率半径 $\displaystyle R=\frac{1}{K}$.
+
+#### （★）常考题型和方法与技巧
+
+##### 题型一 函数的单调性、极值与最值
+
+* 根据驻点（或者单调分界点）分区间讨论（可以使用列表法）
+
+#### 题型二 曲线的凹向、拐点、渐近线及曲率
+
+* 根据驻点、拐点分区间讨论，可以使用列表法
+
+* 求渐近线最直观的方法就是（利用恒等变换、提取因子等方法）将曲线改写成：$y=ax+\alpha(x)$ 的形式
+
+* **同一方向**上，水平渐近线和斜渐近线只能存在一条。
+
+#### 题型三 方程的根的存在性及个数
+
+**1.存在性**
+
+方法 1：零点定理；
+方法 2 ：罗尔定理。
+
+**2.根的个数**
+
+方法1：单调性；
+方法 2：罗尔定理推论。
+**罗尔定理推论** 
+
+若在区间 $I$ 上 $f^{(n)}(x) \neq 0$, 则方程 $f(x)=0$ 在 $I$ 上最多有 $n$ 个实根.
+
+* 带有参数的方程根的问题, 第一步将**参数分离**出来, 可以给求解带来方便
+
+#### 题型四 证明函数不等式
+
+证明不等式常用的五种方法
+
+* （1）单调性；
+* （2）最大最小值；
+* （3）拉格朗日中值定理；
+* （4）泰勒公式；
+* （5）凹凸性。
+
+#### 题型五 微分中值定理有关的证明题
+
+微分中值定理有关的证明题主要有以下三种：
+**$(一)$ 证明存在一个点 $\xi \in(a, b)$, 使 $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$**
+此类问题的一般方法是将要证结论改写为 $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$, 然后构造辅助函数用罗尔定理。而构造辅助函数的方法主要有两种：
+
+1. 分析法（还原法）
+
+根据对欲证的结论 $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$ 的分析，确定辅助函数 $g(x)$ ，使
+$$
+g^{\prime}(x)=F\left[x, f(x), f^{\prime}(x)\right] .
+$$
+
+2. 微分方程法
+
+欲证: $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$,
+(1) 求微分方程 $F\left(x, y, y^{\prime}\right)=0$ 的通解 $H(x, y)=C$;
+(2) 设辅助函数: $g(x)=H(x, f(x))$.
+
+3. 几种经典类型的问题
+
+* Ⅰ.可归纳出一类常用的辅助函数.
+  (1) 欲证 $\xi f^{\prime}(\xi)+n f(\xi)=0$, 令 $F(x)=x^n f(x)$;
+  (2) 欲证 $\xi f^{\prime}(\xi)-n f(\xi)=0$, 令 $F(x)=\frac{f(x)}{x^n}$, 这里 $n$ 为正整数.
+
+* Ⅱ.归纳出一类常用的辅助函数
+  (1) 欲证 $f^{\prime}(\xi)+\lambda f(\xi)=0$, 令 $F(x)=\mathrm{e}^{\lambda x} f(x)$;
+
+  特别地：
+  欲证 $f^{\prime}(\xi)+f(\xi)=0$, 令 $F(x)=\mathrm{e}^x f(x)$;
+  欲证 $f^{\prime}(\xi)-f(\xi)=0$, 令 $F(x)=\mathrm{e}^{-x} f(x)$ ；
+  (2) 欲证 $\alpha f^{\prime}(\xi)+\beta f(\xi)=0$, 令 $F(x)=\mathrm{e}^{\frac{\beta}{\alpha} x} f(x)(\alpha \neq 0)$;
+  (3) 欲证 $f^{\prime}(\xi)+g^{\prime}(\xi) f(\xi)=0$, 令 $F(x)=\mathrm{e}^{g(x)} f(x)$;
+  (4) 欲证 $f^{\prime}(\xi)+g(\xi) f(\xi)=0$, 令 $F(x)=\mathrm{e}^{\int g(x) \mathrm{d} x} f(x)$.
+
+* Ⅲ.可证明下列各题
+
+  (1)设 $f(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导, 试证存在 $\xi \in(a, b)$, 使
+
+$$
+f^{\prime}(\xi)=\frac{f(\xi)-f(a)}{b-\xi}
+$$
+
+
+
+​	(2) 设 $f(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导, 其中 $a>0, f(a)=0$, 证明至少存在一点 $\xi \in$ $(a, b)$, 使 $\displaystyle f(\xi)=\frac{b-\xi}{a} f^{\prime}(\xi)$.
+​	(3) 设 $f(x)$ 在 $[0, \pi]$ 上连续, 在 $(0, \pi)$ 内可导, 试证 $\exists \xi \in(0, \pi)$, 使
+$$
+f^{\prime}(\xi) \sin \xi+2 f(\xi) \cos \xi=0 .
+$$
+
+* Ⅳ.可证明下列各题
+  (1) 设 $f(x)$ 在 $[0,1]$ 上有连续导数, 在 $(0,1)$ 内二阶可导, 且 $f(0)=f(1)$, 试证存在 $\xi \in(0$, 1), 使 $2 f^{\prime}(\xi)+\xi f^{\prime \prime}(\xi)=0$.
+  (2) 设 $f(x)$ 在 $[0,1]$ 上有连续导数, 在 $(0,1)$ 内二阶可导, 且 $f(0)=f(1)$, 试证存在 $\xi \in(0,1)$, 使 $f^{\prime \prime}(\xi)=\frac{2 f^{\prime}(\xi)}{1-\xi}$.
+  (3) 设 $f(x)$ 在 $[0,1]$ 上连续, 在 $(0,1)$ 内二阶可导, $\displaystyle \lim _{x \rightarrow 0^{+}} \frac{f(x)}{x}=1, \lim _{x \rightarrow 1^{-}} \frac{f(x)}{x-1}=2$.
+
+​	试证: (I) $\exists \xi \in(0,1)$, 使 $f(\xi)=0$;
+​	(II) $\exists \eta \in(0,1)$, 使 $f^{\prime \prime}(\eta)=f(\eta)$.
+
+* Ⅴ.可以证明
+  (1) 设 $f(x)$ 和 $g(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导, 且 $g^{\prime}(x) \neq 0$, 则存在 $\xi \in(a, b)$, 使得
+
+$$
+\frac{f(a)-f(\xi)}{g(\xi)-g(b)}=\frac{f^{\prime}(\xi)}{g^{\prime}(\xi)}
+$$
+
+​	(2) 设 $f(x)$ 和 $g(x)$ 在 $[a, b]$ 上连续, 则存在 $\xi \in(a, b)$, 使得 $\displaystyle f(\xi) \int_a^{\xi} g(t) \mathrm{d} t=g(\xi) \int_{\xi}^b f(t) \mathrm{d} t$.
+
+* Ⅵ.设 $f(x)$ 在 $[0,1]$ 上二阶可导, 且 $f(0)=f^{\prime}(0)=f^{\prime \prime}(0)=f(1)=0$, 证明存在 $\xi \in(0,1)$,使得 $\xi^2 f^{\prime \prime}(\xi)-2 f(\xi)=0$.
+
+**(二) 证明存在两个中值点 $\xi, \eta \in(a, b)$, 使 $F\left[\xi, \eta, f(\xi), f(\eta), f^{\prime}(\xi), f^{\prime}(\eta)\right]=0$**
+**方法**
+
+* (1)不要求 $\xi \neq \eta$ :
+  在同一区间 $[a, b]$ 上用两次中值定理 (拉格朗日、柯西中值定理).
+* (2) 要求 $\xi \neq \eta$ :
+
+​	将区间 $[a, b]$ 分为两个子区间, 在两个子区间上分别用拉格朗日中值定理.
+
+* 类别一：可以证明下列各题
+
+(1) 设 $f(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导 $(a>0)$, 且 $f(a)=f(b)=1$, 试证存在 $\xi, \eta \in$ $(a, b)$, 使得 $\displaystyle \left(\frac{\eta}{\xi}\right)^{n-1}=f(\xi)+\frac{\xi}{n} f^{\prime}(\xi)$.
+(2) 设 $f(x)$ 在 $[a, b]$ 上连续, 在 $(a, b)$ 内可导 $(a>0)$, 试证存在 $\xi, \eta \in(a, b)$, 使得 $\displaystyle f^{\prime}(\xi)=\frac{\eta^2 f^{\prime}(\eta)}{a b}$.
+
+* 类别二：可以证明下列各题
+
+(1) 设 $f(x)$ 在 $[0,1]$ 上连续, 在 $(0,1)$ 内可导, 且 $f(0)=0, f(1)=1$, 试证对任意给定的 $n$ 个正数 $a_1, a_2, \cdots, a_n$, 在 $(0,1)$ 内一定存在互不相同的 $n$ 个数, $0<\xi_1<\xi_2<\cdots<\xi_n<1$, 使得
+$$
+\frac{a_1}{f^{\prime}\left(\xi_1\right)}+\frac{a_2}{f^{\prime}\left(\xi_2\right)}+\cdots+\frac{a_n}{f^{\prime}\left(\xi_n\right)}=a_1+a_2+\cdots+a_n
+$$
+(2)设 $f(x)$ 在 $[0, a]$ 上可导 $(a>0), f(0)=1, f(a)=0$, 证明: 在 $(0, a)$ 上存在 $x_1<x_2$,使得 $f^{\prime}\left(x_1\right) f^{\prime}\left(x_2\right)=\frac{1}{a^2}$.
+
+**（三）证明存在一个中值点 $\xi \in(a, b)$, 使 $F\left[\xi, f^{(n)}(\xi)\right] \geqslant 0(n \geqslant 2)$**
+**方法**
+
+* 用带拉格朗日余项的泰勒公式, 其中 $x_0$ 点选题目中提供函数值和导数值信息多的点.
+
+【例 1】设 $f(x)$ 在 $[a, b]$ 上二阶可导, $f^{\prime}(a)=f^{\prime}(b)=0$.
+求证：存在 $\xi \in(a, b)$ ，使 $\displaystyle\left|f^{\prime \prime}(\xi)\right| \geqslant 4 \frac{|f(b)-f(a)|}{(b-a)^2}$ 。
+**证明**：由泰勒公式知
+$$
+\begin{aligned}
+& f(x)=f(a)+f^{\prime}(a)(x-a)+\frac{f^{\prime \prime}\left(\xi_1\right)}{2!}(x-a)^2,① \\
+& f(x)=f(b)+f^{\prime}(b)(x-b)+\frac{f^{\prime \prime}\left(\xi_2\right)}{2!}(x-b)^2,②
+\end{aligned}
+$$
+②式减去 ①式得
+$$
+f(b)-f(a)=\frac{f^{\prime \prime}\left(\xi_1\right)}{2!}(x-a)^2-\frac{f^{\prime \prime}\left(\xi_2\right)}{2!}(x-b)^2 .
+$$
+
+在该式中令 $x=\frac{a+b}{2}$ 得
+$$
+f(b)-f(a)=\frac{(b-a)^2}{8}\left[f^{\prime \prime}\left(\xi_1\right)-f^{\prime \prime}\left(\xi_2\right)\right] .
+$$
+
+从而有
+$$
+\begin{aligned}
+|f(b)-f(a)| & \leqslant \frac{(b-a)^2}{8}\left(\left|f^{\prime \prime}\left(\xi_1\right)\right|+\left|f^{\prime \prime}\left(\xi_2\right)\right|\right) \leqslant \frac{(b-a)^2}{4} \max \left(\left|f^{\prime \prime}\left(\xi_1\right)\right|,\left|f^{\prime \prime}\left(\xi_2\right)\right|\right) \\
+& =\frac{(b-a)^2}{4}\left|f^{\prime \prime}(\xi)\right|
+\end{aligned}
+$$
+
+故 $\displaystyle \left|f^{\prime \prime}(\xi)\right| \geqslant 4 \frac{|f(b)-f(a)|}{(b-a)^2}$.
+【例 2】设 $f(x)$ 在 $[0,1]$ 上三阶可导, $f(0)=0, f(1)=1, f^{\prime}\left(\frac{1}{2}\right)=0$.
+求证：存在 $\xi \in(0,1)$ ，使 $\left|f^{\prime \prime \prime}(\xi)\right| \geqslant 24$ 。
+证明由泰勒公式得
+$$
+f(x)=f\left(\frac{1}{2}\right)+f^{\prime}\left(\frac{1}{2}\right)\left(x-\frac{1}{2}\right)+\frac{f^{\prime \prime}\left(\frac{1}{2}\right)}{2!}\left(x-\frac{1}{2}\right)^2+\frac{f^{\prime \prime \prime}(\xi)}{3!}\left(x-\frac{1}{2}\right)^3 .
+$$
+
+在上式中令 $x=0$ 和 $x=1$ 得
+$$
+\begin{aligned}
+& f(0)=f\left(\frac{1}{2}\right)+\frac{f^{\prime \prime}\left(\frac{1}{2}\right)}{2!} \frac{1}{4}-\frac{f^{\prime \prime \prime}\left(\xi_1\right)}{48}=0, \\
+& f(1)=f\left(\frac{1}{2}\right)+\frac{f^{\prime \prime}\left(\frac{1}{2}\right)}{2!} \frac{1}{4}+\frac{f^{\prime \prime \prime}\left(\xi_2\right)}{48}=1
+\end{aligned}
+$$
+②式减①式得
+$$
+48=f^{\prime \prime \prime}\left(\xi_1\right)+f^{\prime \prime \prime}\left(\xi_2\right),
+$$
+
+从而
+$$
+48 \leqslant\left|f^{\prime \prime \prime}\left(\xi_1\right)\right|+\left|f^{\prime \prime \prime}\left(\xi_2\right)\right| \leqslant 2 \max \left(\left|f^{\prime \prime \prime}\left(\xi_1\right)\right|,\left|f^{\prime \prime \prime}\left(\xi_2\right)\right|\right),
+$$
+
+故存在 $\xi \in(0,1)$, 使 $\left|f^{\prime \prime \prime}(\xi)\right| \geqslant 24$.
+【例3】设 $f(x)$ 在 $[0,1]$ 上有二阶连续导数, 且 $\displaystyle f(0)=f(1)=0, \min _{0 \leqslant x \leqslant 1} f(x)=-1$, 证明: $\displaystyle\max _{0 \leqslant x \leqslant 1} f^{\prime \prime}(x) \geqslant 8$.
+
+**证明**：本题只要证明存在 $\xi \in(0,1)$, 使 $f^{\prime \prime}(\xi) \geqslant 8$.
+设 $\displaystyle f(c)=\min _{0 \leqslant x \leqslant 1} f(x)=-1$, 则 $0<c<1$, 且 $f^{\prime}(c)=0$. 由泰勒公式知
+$$
+f(x)=f(c)+f^{\prime}(c)(x-c)+\frac{f^{\prime \prime}(\xi)}{2!}(x-c)^2,
+$$
+
+在上式中分别令 $x=0$, 和 $x=1$ 得
+$$
+\begin{array}{ll}
+f^{\prime \prime}\left(\xi_1\right)=\frac{2}{c^2}, & \xi_1 \in(0, c) \\
+f^{\prime \prime}\left(\xi_2\right)=\frac{2}{(1-c)^2}, & \xi_2 \in(c, 1)
+\end{array}
+$$
+
+若 $c \leqslant \frac{1}{2}$, 则 $f^{\prime \prime}\left(\xi_1\right)=\frac{2}{c^2} \geqslant \frac{2}{\left(\frac{1}{2}\right)^2}=8$.
+若 $c>\frac{1}{2}$, 则 $f^{\prime \prime}\left(\xi_2\right)=\frac{2}{(1-c)^2} \geqslant \frac{2}{\left(\frac{1}{2}\right)^2}=8$.
+故 $\displaystyle \max _{0 \leqslant x \leqslant 1} f^{\prime \prime}(x) \geqslant 8$.
+
+【经典问题】：
+设函数 $f(x)$ 在 $[-a, a]$ 上具有 2 阶连续导数. 证明：
+(1) 若 $f(0)=0$, 则存在 $\xi \in(-a, a)$, 使得 $f^{\prime \prime}(\xi)=\frac{1}{a^2}[f(a)+f(-a)]$;
+(2) 若 $f(x)$ 在 $(-a, a)$ 内取得极值, 则存在 $\eta \in(-a, a)$, 使得
+$$
+\left|f^{\prime \prime}(\eta)\right| \geqslant \frac{1}{2 a^2}|f(a)-f(-a)|
+$$
 
 
 ## 第三章 一元函数积分学
