--- a/大学数学.md
+++ b/大学数学.md
@@ -2670,8 +2670,8 @@ $$
    （1）若积分域 $D$ 关于 $y$ 轴对称， $f(x, y)$ 关于 $x$ 有奇偶性，则
 
 $$
-\iint_D f(x, y) \mathrm{d} \sigma=\left\{\begin{array}{cc}
-2 \iint_{D_{x \geqslant 0}} f(x, y) \mathrm{d} \sigma, & f(-x, y)=f(x, y), \\
+\underset{D}\iint f(x, y) \mathrm{d} \sigma=\left\{\begin{array}{cc}
+2 \underset{D_{x \geqslant 0}}\iint f(x, y) \mathrm{d} \sigma, & f(-x, y)=f(x, y), \\
 0, & f(-x, y)=-f(x, y) .
 \end{array}\right.
 $$
@@ -2679,7 +2679,7 @@ $$
 （2）若积分域 $D$ 关于 $x$ 轴对称， $f(x, y)$ 关于 $y$ 有奇偶性，则
 $$
 \iint_D f(x, y) \mathrm{d} \sigma=\left\{\begin{array}{cc}
-2 \iint_{D_{y \geqslant 0}} f(x, y) \mathrm{d} \sigma, & f(x,-y)=f(x, y), \\
+2 \underset{D_{y \geqslant 0}}\iint f(x, y) \mathrm{d} \sigma, & f(x,-y)=f(x, y), \\
 0, & f(x,-y)=-f(x, y) .
 \end{array}\right.
 $$
