--- a/大学数学.md
+++ b/大学数学.md
@@ -8,7 +8,7 @@
 
 **1.函数概念**
 
-函数的定义： 如果对于每个数x∈D，变量y按照一定的规则总有一个确定的y与它对应，则称x是y的**函数**，记为$y=f(x)$。常称x为**自变量**，y为**因变量**，D为**定义域**。
+函数的定义： 如果对于每个数 $x∈D$ ，变量 $y$ 按照一定的规则总有一个确定的 $y$ 与它对应，则称 $x$ 是 $y$ 的**函数**，记为$y=f(x)$。常称 $x$ 为**自变量**，$y$ 为**因变量**，$D$ 为**定义域**。
 
 ​	**定义域** $D_f=D$
 
@@ -20,7 +20,7 @@
 $$
 y = sgn(x) =\left\{\begin{matrix}   -1 & x<0 \\    0 & x=0 \\1 & x>0\end{matrix}\right.
 $$
-【典例2】设x为任意实数，不超过x的最大整数称为x的整数部分，记为[x].函数y=[x]称为**取整函数**.
+【典例2】设 $x$ 为任意实数，不超过 $x$ 的最大整数称为  $x$ 的整数部分，记为 $[x]$.函数 $y=[x]$ 称为**取整函数**.
 
 - [x] 取整函数的**基本不等式**：$x-1<[x]≤x$
 
@@ -1203,7 +1203,9 @@ $$
 **4.函数的最值**
 
 连续函数 $f(x)$ 在 $[a, b]$ 上的最值的求法.
+
 第一步：求出 $f(x)$ 在开区间 $(a, b)$ 内的驻点和不可导的点 $x_1, x_2, \cdots, x_n$;
+
 第二步: 求出 $f(x)$ 在点 $x_1, x_2, \cdots, x_n$ 和区间端点 $a, b$ 处的函数值 $f\left(x_1\right), f\left(x_2\right), \cdots, f\left(x_n\right), f(a)$, $f(b)$ ；
 
 第三步: 比较以上各点函数值, 其中最大的即为 $f(x)$ 在 $[a, b]$ 上的最大值, 最小的即为 $f(x)$在 $[a, b]$ 上的最小值.
@@ -1762,7 +1764,9 @@ $$
 2. **换元积分法**
 
 设 $f(x)$ 在区间 $[a, b]$ 上连续, 函数 $x=\varphi(t)$ 满足以下条件:
+
 (1) $\varphi(\alpha)=a, \varphi(\beta)=b$ ；
+
 (2) $\varphi(t)$ 在 $[\alpha, \beta]$ (或 $[\beta, \alpha]$ ) 上具有连续导数, 且其值域 $R_{\varphi}=[a, b]$,则
 $$
 \int_{a}^{b} f(x) \mathrm{d} x=\int_{\alpha}^{\beta} f(\varphi(t)) \varphi^{\prime}(t) \mathrm{d} t
@@ -1828,7 +1832,9 @@ $$
 
 #### （★常考题型的方法与技巧）
 
-题型一 定积分的概金、性质及几何意义
+##### 题型一 定积分的概念、性质及几何意义
+
+
 
 ##### 题型二 定积分计算
 
@@ -2728,4 +2734,4 @@ $$
 
 #### 题型四 与二重积分有关的积分不等式问题
 
-* 主要是利用函数积分域大小、增减性、对称性、柯西积分不等式等等入手
+* 主要是利用函数积分域大小、增减性、对称性、柯西积分不等式等方面入手
