--- a/大学数学.md
+++ b/大学数学.md
@@ -575,6 +575,7 @@ $\tan x- x\sim \frac {x^3}3$, $x- \arctan x\sim \frac {x^3}3.$
 * ①这五个等价无穷小中前三个要记住，后两个可由前两个推得.
 
 ​	事实上由 $x-\sin x\sim\frac{x^{3}}6$ 得，$\arcsin(\sin x)-\sin x\sim\frac{x^{3}}6\sim\frac{\sin^{3}x}6$,从而有$\arcsin x-x\sim\frac{x^{3}}6$
+
 ​	同理可由$\tan x-x\sim\frac{x^3}3$推得$x-\arctan x\sim\frac{x^3}3.$
 
 * ② 由这几个等价无穷小及等价无穷小的性质(若$\alpha \sim \beta$,则 $\alpha = \beta + o( \beta )$)可得到几个**泰勒公式**.
@@ -662,18 +663,27 @@ $$
 f(x)=f(0)+f'(0)x+\frac{f''(0)}{2!}x^2+\cdots+\frac{f^{(n)}(0)}{n!}x^n+o(x^n)
 $$
 ★几个**常用的泰勒公式**
+
 (1)$\displaystyle  \mathrm{e} ^{x} = 1+ x+ \frac {x^{2}}{2! }+ \cdots + \frac {x^{n}}{n! }+ o( x^{n}) .$
+
 (2)$\displaystyle\sin x=x-\frac{x^{3}}{3!}+\cdots+(-1)^{n-1}\frac{x^{2n-1}}{(2n-1)!}+o(x^{2n-1}).$
+
 (3)$\displaystyle\cos x=1-\frac{x^{2}}{2!}+\cdots+(-1)^{n}\frac{x^{2n}}{(2n)!}+o(x^{2n}).$ 
 
 (4)$\displaystyle \ln ( 1+ x) = x- \frac {x^{2}}2+ \cdots + ( - 1) ^{n- 1} \frac {x^{n}}n+ o( x^{n}) .$
 
 (5) $\displaystyle( 1+ x) ^{\alpha}= 1+ \alpha x+ \frac {\alpha ( \alpha - 1) }{2! }x^{2}+ \cdotp \cdotp \cdotp + \frac {\alpha ( \alpha - 1) \cdotp \cdotp \cdotp ( \alpha - n+ 1) }{n! }x^{n}+ o( x^{n}) .$
+
 【例】求极限$\displaystyle \lim_{x\to0}\frac{\frac{x^2}2+1-\sqrt{1+x^2}}{(\cos x-\mathrm{e}^{x^2})\sin^2x}.$
+
 解： 由于$\sqrt{1+x^2}=1+\frac12x^2+\frac{\frac12\left(\frac12-1\right)}{2!}x^4+o(x^4)$,
-	$\cos$ $x= 1- \frac 12x^{2}+ o( x^{2})$ ,
-	$\mathrm{e}^{x^2}=1+x^2+o(x^2)$,
+
+​	$\cos$ $x= 1- \frac 12x^{2}+ o( x^{2})$ ,
+
+​	$\mathrm{e}^{x^2}=1+x^2+o(x^2)$,
+
 代人所求极限式得
+
 原式$\displaystyle=\lim_{x\to 0}\frac{\frac18x^4+o(x^4)}{\left[-\frac32x^2+o(x^2)\right]x^2}=-\frac1{12}.$
 
 **方法6 利用夹逼准则求极限**
@@ -823,7 +833,9 @@ $$
 $$
 单调性判定常用有三种方法：
 (1)若$x_{n+1}-x_n\geqslant0(\leqslant0)$,则$\{x_n\}$单调增(单调减);
+
 (2)设$\{x_n\}$不变号，
+
 ①若$x_n>0$,则当$\frac{x_{n+1}}{x_n}\geqslant1(\leqslant1)$ 时，$\{x_n\}$ 单调增(单调减);
 
 ②若$x_n<0$,则当$\frac {x_{n+1}}{x_n}\geqslant1(\leqslant1)$ 时$,\{x_n\}$ 单调减(单调增); 
@@ -831,6 +843,7 @@ $$
 (3)设数列{$x_n$}由$x_1=a,x_{n+1}=f(x_n)(n=1,2,\cdotp\cdotp\cdotp),x_n\in I$所确定，
 ①若$f(x)$在 $I$ 上单调增，则
 当$x_1\leqslant x_2$ 时，$\{x_n\}$单调增；当 $x_1\geqslant x_2$ 时，$\{x_n\}$单调减；
+
 ②若 $f(x)$ 在 $I$ 上单调减，则$\left\{x_n\right\}$**不单调**。
 
 ##### 题型三 确定极限式中的参数
