:sparkles:正文内容排版优化

--- a/高等数学.md
+++ b/高等数学.md
@@ -561,15 +561,17 @@ $$\begin{aligned}&\text{常用的基本极限}\\&\operatorname*{lim}_{x\to0}\fra
 
 当$x\to0$时，
 
-$(1)x\sim\sin x\sim\tan x\sim\arcsin x\sim\arctan x\sim\ln(1+x)\sim\mathrm{e}^x-1$,
-$( 1+ x) ^\alpha- 1\sim \alpha x$ , $1- \cos ^\alpha x\sim \frac \alpha 2x^2$ , $a^x- 1\sim x\ln a$
+(1)$x\sim\sin x\sim\tan x\sim\arcsin x\sim\arctan x\sim\ln(1+x)\sim\mathrm{e}^x-1$,
+
+$(1+x) ^\alpha- 1\sim \alpha x$ , $1- \cos ^\alpha x\sim \frac \alpha 2x^2$ , $a^x- 1\sim x\ln a$
 
 * $当x\to0时,(1+x)^\alpha-1\sim \alpha x,\text{这个结论推广可得},\text{若 }\alpha(x)\to0,\alpha(x)\beta(x)\to0,$
 
   $则(1+\alpha\left(x\right))^{\beta\left(x\right)}-1\sim\alpha\left(x\right)\beta\left(x\right) 
   由此可得\left(1+x\right)^{x}-1\sim x^{2}.$
 
-$( 2) x- \sin x\sim \frac {x^3}6$, $\arcsin x- x\sim \frac {x^3}6$, $x- \ln ( 1+ x) \sim \frac {x^2}2$,
+(2)$ x- \sin x\sim \frac {x^3}6$, $\arcsin x- x\sim \frac {x^3}6$, $x- \ln ( 1+ x) \sim \frac {x^2}2$,
+
 $\tan x- x\sim \frac {x^3}3$, $x- \arctan x\sim \frac {x^3}3.$
 
 * ①这五个等价无穷小中前三个要记住，后两个可由前两个推得.
@@ -848,7 +850,7 @@ $$
 
 ##### 题型三 确定极限式中的参数
 
-对比分析各个部分，找到常数的合法取值使得极限式的极限存在。
+​	对比分析各个部分，找到常数的合法取值使得极限式的极限存在。
 
 部分容易求出的常数可以先求出，再解决其他常数的求值问题。
 
