:sparkles:排版显示优化

--- a/高等数学.md
+++ b/高等数学.md
@@ -441,9 +441,9 @@ $\lim f(x)=A\Leftrightarrow f(x)=A+\alpha(x)$,其中$\lim_\alpha(x)=0.$
 
 在自变量的同一变化过程中：
 
-* 若  f(x)  是无穷大,则 $ \frac{1}{f(x)}$  是无穷小; 
+* 若  $f(x)$ 是无穷大,则 $ \frac{1}{f(x)}$  是无穷小; 
 
-* 若  f(x)  是无穷小,且 $ f(x)   \neq 0 , 则  \frac{1}{f(x)}$  是无穷大.
+* 若  $f(x)$  是无穷小,且 $ f(x)   \neq 0 , 则  \frac{1}{f(x)}$  是无穷大.
 
 #### （★）常考题型的方法与技巧
 
@@ -853,7 +853,7 @@ $$
 
 ​	对比分析各个部分，找到常数的合法取值使得极限式的极限存在。
 
-部分容易求出的常数可以先求出，再解决其他常数的求值问题。
+​	部分容易求出的常数可以先求出，再解决其他常数的求值问题。
 
 ##### 题型四 无穷小量阶的比较
 
@@ -934,7 +934,7 @@ $$
 
 #### （一）导数概念
 
-**定义**(导数)设函数 y$=f(x)$在$x_0$的某邻域内有定义，如果极限
+**定义**(导数)设函数 $y=f(x)$在$x_0$的某邻域内有定义，如果极限
 $$
 \lim\limits_{\Delta x\to0}\frac{\Delta y}{\Delta x}=\lim\limits_{\Delta x\to0}\frac{f(x_0+\Delta x)-f(x_0)}{\Delta x}
 $$
@@ -1069,7 +1069,9 @@ $③(u\pm v)^{(n)}=u^{(n)}\pm v^{(n)};$ $④( uv) ^{( n) }$ = $\displaystyle \su
 
 这里的重点是导数的概念，其题型主要有三种：
 
-（1）利用导数定义求极限；（2）利用导数定义求导数；
+（1）利用导数定义求极限；
+
+（2）利用导数定义求导数；
 
 （3）利用导数定义判断函数的可导性.
 
