:sparkles:公式文字显示优化

--- a/高等数学.md
+++ b/高等数学.md
@@ -566,10 +566,11 @@ $$\begin{aligned}&\text{常用的基本极限}\\&\operatorname*{lim}_{x\to0}\fra
 
 $(1+x) ^\alpha- 1\sim \alpha x$ , $1- \cos ^\alpha x\sim \frac \alpha 2x^2$ , $a^x- 1\sim x\ln a$
 
-* $当x\to0时,(1+x)^\alpha-1\sim \alpha x,\text{这个结论推广可得},\text{若 }\alpha(x)\to0,\alpha(x)\beta(x)\to0,$
+* 当$x\to0$时,$(1+x)^\alpha-1\sim \alpha x,$这个结论推广可得,若 $\alpha(x)\to0,\alpha(x)\beta(x)\to0,$
 
-  $则(1+\alpha\left(x\right))^{\beta\left(x\right)}-1\sim\alpha\left(x\right)\beta\left(x\right) 
-  由此可得\left(1+x\right)^{x}-1\sim x^{2}.$
+  则$(1+\alpha\left(x\right))^{\beta\left(x\right)}-1\sim\alpha\left(x\right)\beta\left(x\right) $
+  
+  由此可得$\left(1+x\right)^{x}-1\sim x^{2}.$
 
 (2)$ x- \sin x\sim \frac {x^3}6$, $\arcsin x- x\sim \frac {x^3}6$, $x- \ln ( 1+ x) \sim \frac {x^2}2$,
 
