:sparkles:修正公式显示

--- a/线性代数.md
+++ b/线性代数.md
@@ -12,7 +12,7 @@
 
 #### 2.性质
 
-1. 经转置行列式的值不变，即|A^T^|=|A|
+1. 经转置行列式的值不变，即$|A^T|=|A|$
 2. 某行有公因数k,可把k提到行列式外.若某行元素全为0,则行列式的值为0
 3. 两行互换行列式变号.特别地，两行相等，行列式值为0;两行成比例，行列式值为0
 4. **某行**所有元素都是两个数的和，则可写成**两个**行列式之和（所以，一般来说$|A+B|≠|A|+|B|$，A + B相当于所有行元素都是两个数之和）
@@ -70,7 +70,7 @@ c_1 & c_2 & c_3
 \end{aligned}
 $$
 
-注意 这样的计算方法对四阶及四阶以上行列式不适用.
+注意：这样的计算方法对四阶及四阶以上行列式不适用.
 
 ### 第 2 节 基本内容与重要结论
 
@@ -565,8 +565,8 @@ $$
 
 #### 5.极大线性无关组↓
 
-* 概念：
-* 求法
+* 概念：在线性空间中，向量个数最多且线性无关的向量组。
+* 求法：
 
 #### 6.向量组的秩
 
@@ -1028,7 +1028,7 @@ $$
 
 ---
 
-解（I）由 $\boldsymbol{A}$ 的特征多项式
+解：（I）由 $\boldsymbol{A}$ 的特征多项式
 $$
 \begin{aligned}
 |\lambda \boldsymbol{E}-\boldsymbol{A}| & =\left|\begin{array}{ccc}
