:sparkles:数学公式显示优化

--- a/线性代数.md
+++ b/线性代数.md
@@ -16,13 +16,13 @@
 2. 某行有公因数k,可把k提到行列式外.若某行元素全为0,则行列式的值为0
 3. 两行互换行列式变号.特别地，两行相等，行列式值为0;两行成比例，行列式值为0
 4. **某行**所有元素都是两个数的和，则可写成**两个**行列式之和（所以，一般来说$|A+B|≠|A|+|B|$，A + B相当于所有行元素都是两个数之和）
-5. 某行的k倍加至另一行，行列式的值不变
+5. 某行的 $k$ 倍加至另一行，行列式的值不变
 
 ####  3.展开式
 
 1. $|A| = a_{i1}A_{i1}+ a_{i2}A_{i2}+ ... + a_{in}A_{in}$ (按 $i$ 行展开)
 2. $|A| = a_{1j}A_{1j}+ a_{2j}A_{2j}+ \cdots + a_{nj}A_{nj}$ (按 $j$ 列展开)
-3. $Aij$是代数余子式，$Mij$是余子式。
+3. $A_{ij}$是代数余子式，$M_{ij}$是余子式。
 
 #### 4.计算
 
@@ -38,11 +38,11 @@
 
 #### 5.证|A| = 0
 
-* Ax=0有非零解
+* $Ax=0$ 有非零解
 * 反证法
-* r(A)<n
+* $r(A)<n$
 * 0是特征值
-* |A|=-|A| 
+* $|A|=-|A|$ 
 
 #### 6.应用
 
