:sparkles:数学公式显示优化

--- a/线性代数.md
+++ b/线性代数.md
@@ -13,7 +13,7 @@
 #### 2.性质
 
 1. 经转置行列式的值不变，即$|A^T|=|A|$
-2. 某行有公因数k,可把k提到行列式外.若某行元素全为0,则行列式的值为0
+2. 某行有公因数 $k$,可把 $k$ 提到行列式外.若某行元素全为0,则行列式的值为0
 3. 两行互换行列式变号.特别地，两行相等，行列式值为0;两行成比例，行列式值为0
 4. **某行**所有元素都是两个数的和，则可写成**两个**行列式之和（所以，一般来说$|A+B|≠|A|+|B|$，A + B相当于所有行元素都是两个数之和）
 5. 某行的 $k$ 倍加至另一行，行列式的值不变
