:sparkles:文本显示优化

--- a/高等数学.md
+++ b/高等数学.md
@@ -40,7 +40,7 @@ $$
 
 * 在同一直角坐标系中，$y=f(x)$和$x=f^{-1}(y)$图形**重合**，但$y=f(x)$和$y=f^{-1}(x)$关于$y=x$对称
 
-- [x] 注2:$f^{-1}(f(x))=x$、$f(f^{-1}(x))=x$
+- [x] 注2：$f^{-1}(f(x))=x$、$f(f^{-1}(x))=x$
 
 
 **4.初等函数**
@@ -330,11 +330,11 @@ $$
 $$
 (2)自变量趋于有限值时函数的极限
 
-① 极限$\displaystyle{\lim_{x\to x_0}f(x)=A:\forall\varepsilon>0,\exists\delta(\varepsilon)>0,当0<\mid x-x_0\mid<\delta时，有\mid f(x)-A\mid<\varepsilon.}$
+① 极限$\displaystyle\lim_{x\to x_0}f(x)=A:\forall\varepsilon>0,\exists\delta(\varepsilon)>0$，当$0<\mid x-x_0\mid<\delta$时，有$\mid f(x)-A\mid<\varepsilon.$
 
 - [x] ：函数$f(x)$在点$x_0$处的极限是否存在，如果存在极限值等于多少仅与$f(x)$在$x_0$点的去心邻域$\mathring{U}(x_0,\delta)$内的函数值有关，而与$f(x)$在$x_0$**是否有定义 ,如果有定义函数值等于多少无关**。
 
-②左极限$\displaystyle{:\lim_{x\to x_0^-}f(x)=f(x_0^-);}$ 
+②左极限$\displaystyle{:\lim_{x\to x_0^-}f(x)=f(x_0^-)}$ 
 
 ③右极限$\displaystyle{:\lim_{x\to x_0^+}f(x)=f(x_0^+)}$
 
@@ -429,8 +429,8 @@ $\lim f(x)=A\Leftrightarrow f(x)=A+\alpha(x)$,其中$\lim_\alpha(x)=0.$
 (1)当$x\to+\infty 时，\ln^{a}x\ll x^{\beta}\ll a^{x}($其中$\alpha>0,\beta>0,a>1).$
 (2)当$n\to\infty$时，$\ln^an\ll n^\beta\ll a^n\ll n!\ll n^n($其中$\alpha>0,\beta>0,a>1).$
 **3.无穷大与无界变量的关系   无穷大$\Rightarrow$无界变量**
-数列$\left\{x_n\right\}$是无穷大量$:\forall M>0,\exists N$,当 $n>N$ 时，恒有$\left|x_n\right|>M.$
-数列$\left\{x_n\right\}$是无界变量$:\forall M>0,\exists N$,使$\left|x_{N}\right|>M.$
+数列$\left\{x_n\right\}$是无穷大量：$\forall M>0,\exists N$,当 $n>N$ 时，恒有$\left|x_n\right|>M.$
+数列$\left\{x_n\right\}$是无界变量：$\forall M>0,\exists N$,使$\left|x_{N}\right|>M.$
 无穷大量一定是无界变量；
 
 但无界变量不一定是无穷大量.
@@ -506,7 +506,7 @@ $$\displaystyle \text{又}\lim_{n\to\infty}\frac{\frac{1}{a_{n+1}}}{\frac{1}{a_{
 
 【例4】证明：(1)对任意的正整数 $n$,都有$\frac1{n+1}<\ln\left(1+\frac1n\right)<\frac1n$ 成立.
 
-(2)$$\text{设 }a_{n}=1+\frac{1}{2}+\cdots+\frac{1}{n}-\ln\:n(n=1,2,\cdots),\text{证明数列}\left\{a_{n}\right\}\text{收敛}.$$
+(2)设$a_{n}=1+\frac{1}{2}+\cdots+\frac{1}{n}-\ln\:n(n=1,2,\cdots),$证明数列$\left\{a_{n}\right\}$收敛.
 
 证明：(1)根据拉格朗日中值定理，存在 $\xi\in(n,n+1)$,使得
 $$
