:sparkles:数学公式表示优化

--- a/高等数学.md
+++ b/高等数学.md
@@ -260,7 +260,7 @@ D选项周期为 $2π$，在 $-π$ 到 $π$ 上积分，因为函数为奇函数
 
 (D)对任意的$x∈(−δ,0)$有$f(x)>f(0).$
 
-解：本题要用到一个常用的结论:
+解：本题要用到一个常用的结论：
 
 ​	若$f'(x_0)>0$,则存在$δ>0$,当$x∈(x_0−δ,x_0)$时,$f(x)<f(x_0)$;当$x∈(x_0,x_0+δ)$时,$f(x)>f(x_0)$.
 
@@ -334,9 +334,9 @@ $$
 
 - [x] ：函数$f(x)$在点$x_0$处的极限是否存在，如果存在极限值等于多少仅与$f(x)$在$x_0$点的去心邻域$\mathring{U}(x_0,\delta)$内的函数值有关，而与$f(x)$在$x_0$**是否有定义 ,如果有定义函数值等于多少无关**。
 
-②左极限$\displaystyle{:\lim_{x\to x_0^-}f(x)=f(x_0^-)}$ 
+②左极限：$\displaystyle{\lim_{x\to x_0^-}f(x)=f(x_0^-)}$ 
 
-③右极限$\displaystyle{:\lim_{x\to x_0^+}f(x)=f(x_0^+)}$
+③右极限：$\displaystyle{\lim_{x\to x_0^+}f(x)=f(x_0^+)}$
 
 **定理**
 $$
@@ -545,11 +545,11 @@ $\lim \frac {f( x) }{g( x) }= \frac {\lim f( x) }{\lim g( x) }= \frac AB$ $( B\n
 
 ( 即：极限**非零的因子的极限**可先求出来)
 
-(2)若$$\text{}\operatorname*{lim}\frac{f(x)}{g(x)}\:\text{存在,且}\:\operatorname*{lim}g(x)=0\:,\text{则}\:\mathrm{lim}f(x)=0\:;$$
+(2)若$\lim\frac{f(x)}{g(x)}$存在,且$\lim g(x)=0,$则$\lim f(x)=0$;
 
-(3)若$\lim\frac{f(x)}{g(x)}=A\neq0$,且$\lim f(x)=0$,则$\lim g(x)=0.$
+(3)若$\lim\frac{f(x)}{g(x)}=A\neq0$,且$\lim f(x)=0$,则$\lim g(x)=0$.
 
-- [x] 若$\lim f( x)$ 存在$,\lim g(x)$ 不存在，则$\lim[f(x)\pm g(x)]$一定不存在；
+- [x] 若$\lim f(x)$ 存在$,\lim g(x)$ 不存在，则$\lim[f(x)\pm g(x)]$一定不存在；
 - [x] 若$\lim f(x)$ 和$\lim g(x)$都不存在，则$\lim[f(x)\pm g(x)]$不一定存在.
 
 **方法 2 利用基本极限求极限**
@@ -1183,7 +1183,7 @@ $$
 其中 $\displaystyle R_n(x)=\frac{f^{(n+1)}(\xi)}{(n+1)!}\left(x-x_0\right)^{n+1}, \xi$ 在 $x_0$ 与 $x$ 之间.
 
 * (1) 以上四大中值定理，特别是拉格朗日中值定理建立了**函数在区间上的变化（改变量）与函数在该区间内一点处导数的关系**，从而使我们能够利用导数来研究函数在区间上的**整体性态**。
-* (2) 四大中值定理的关系如下:
+* (2) 四大中值定理的关系如下：
 
 ![2.2.1 四大中值定理的关系](文档插图/2.2.1 四大中值定理的关系.png)
 
@@ -1225,9 +1225,9 @@ $$
 
 第一步：求出 $f(x)$ 在开区间 $(a, b)$ 内的驻点和不可导的点 $x_1, x_2, \cdots, x_n$;
 
-第二步: 求出 $f(x)$ 在点 $x_1, x_2, \cdots, x_n$ 和区间端点 $a, b$ 处的函数值 $f\left(x_1\right), f\left(x_2\right), \cdots, f\left(x_n\right), f(a)$, $f(b)$ ；
+第二步：求出 $f(x)$ 在点 $x_1, x_2, \cdots, x_n$ 和区间端点 $a, b$ 处的函数值 $f\left(x_1\right), f\left(x_2\right), \cdots, f\left(x_n\right), f(a)$, $f(b)$ ；
 
-第三步: 比较以上各点函数值, 其中最大的即为 $f(x)$ 在 $[a, b]$ 上的最大值, 最小的即为 $f(x)$在 $[a, b]$ 上的最小值.
+第三步： 比较以上各点函数值, 其中最大的即为 $f(x)$ 在 $[a, b]$ 上的最大值, 最小的即为 $f(x)$在 $[a, b]$ 上的最小值.
 
 * 当闭区间 $[a, b]$ 上的连续函数 $f(x)$ 在 $(a, b)$ 内仅有唯一极值点, 若在该点 $f(x)$ 取得极大值 (或极小值), 则它也是 $f(x)$ 在 $[a, b]$ 上的最大值 (或最小值).
 
@@ -1359,7 +1359,7 @@ $$
 
 2. 微分方程法
 
-欲证: $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$,
+欲证： $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$,
 (1) 求微分方程 $F\left(x, y, y^{\prime}\right)=0$ 的通解 $H(x, y)=C$;
 (2) 设辅助函数: $g(x)=H(x, f(x))$.
 
@@ -1400,7 +1400,7 @@ $$
   (2) 设 $f(x)$ 在 $[0,1]$ 上有连续导数, 在 $(0,1)$ 内二阶可导, 且 $f(0)=f(1)$, 试证存在 $\xi \in(0,1)$, 使 $f^{\prime \prime}(\xi)=\frac{2 f^{\prime}(\xi)}{1-\xi}$.
   (3) 设 $f(x)$ 在 $[0,1]$ 上连续, 在 $(0,1)$ 内二阶可导, $\displaystyle \lim _{x \rightarrow 0^{+}} \frac{f(x)}{x}=1, \lim _{x \rightarrow 1^{-}} \frac{f(x)}{x-1}=2$.
 
-​	试证: (I) $\exists \xi \in(0,1)$, 使 $f(\xi)=0$;
+​	试证： (I) $\exists \xi \in(0,1)$, 使 $f(\xi)=0$;
 ​	(II) $\exists \eta \in(0,1)$, 使 $f^{\prime \prime}(\eta)=f(\eta)$.
 
 * Ⅴ.可以证明
@@ -1417,9 +1417,9 @@ $$
 **(二) 证明存在两个中值点 $\xi, \eta \in(a, b)$, 使 $F\left[\xi, \eta, f(\xi), f(\eta), f^{\prime}(\xi), f^{\prime}(\eta)\right]=0$**
 **方法**
 
-* (1)不要求 $\xi \neq \eta$ :
+* (1)不要求 $\xi \neq \eta$ ：
   在同一区间 $[a, b]$ 上用两次中值定理 (拉格朗日、柯西中值定理).
-* (2) 要求 $\xi \neq \eta$ :
+* (2) 要求 $\xi \neq \eta$ ：
 
 ​	将区间 $[a, b]$ 分为两个子区间, 在两个子区间上分别用拉格朗日中值定理.
 
@@ -1819,7 +1819,7 @@ $$
    (1) $\int_{0}^{\frac{\pi}{2}} \sin ^{n} x \mathrm{~d} x=\int_{0}^{\frac{\pi}{2}} \cos ^{n} x \mathrm{~d} x=\left\{\begin{array}{lc}\frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdots \cdot \frac{1}{2} \cdot \frac{\pi}{2}, & n \text { 为偶数, } \\ \frac{n-1}{n} \cdot \frac{n-3}{n-2} \cdot \cdots \cdot \frac{2}{3}, & n \text { 为大于 } 1 \text { 的奇数. }\end{array}\right.$
    (2) $\displaystyle\int_{0}^{\pi} x f(\sin x) \mathrm{d} x=\frac{\pi}{2} \int_{0}^{\pi} f(\sin x) \mathrm{d} x \quad$ (其中 $f(x)$ 连续).
 
-#### （五）变上限积分: $\int_{a}^{x} f(t) \mathrm{d} t$
+#### （五）变上限积分： $\int_{a}^{x} f(t) \mathrm{d} t$
 
 **定理**： 若 $f(x)$ 在 $[a, b]$ 上连续,则 $\int_{a}^{x} f(t) \mathrm{d} t$ 在 $[a, b]$ 上可导且
 $$
