--- a/高等数学.md
+++ b/高等数学.md
@@ -270,7 +270,7 @@ D选项周期为 $2π$，在 $-π$ 到 $π$ 上积分，因为函数为奇函数
 
 ​	由以上结论知(C)正确.
 
-- [x] 本题选(A)是一种典型的错误,原因是由$f'(x_0)>0$,得不到一定存在 $x_0$ 的某邻域,在此邻域内 $f(x)$ 单调增.反例如下:
+- [x] 本题选(A)是一种典型的错误,原因是由$f'(x_0)>0$,得不到一定存在 $x_0$ 的某邻域,在此邻域内 $f(x)$ 单调增.反例如下：
 
 ​	令$f(x) =\left\{\begin{matrix}   x+2x^2sin\frac{1}x ,& x≠0  \\0, & x=0\end{matrix}\right.$
 
@@ -295,7 +295,7 @@ D选项周期为 $2π$，在 $-π$ 到 $π$ 上积分，因为函数为奇函数
 ​	即 $F(x)$ 为偶函数.
 (方法二) $F( x) = \int _0^x( x- 2t) f( t)$d$t=x\int_0^xf(t)$d$t-2\int_0^xtf(t)$d$t$,
 ​	由于$f(x)$为偶函数，则$x\int_0^xf(t)$d$t,\int_0^xtf(t)$d$t$都是偶函数，故$F(x)$为偶函数.
-$( 2) F^{\prime }( x) = \left [ x\int _{0}^{x}f( t) \:\mathrm{d} t- 2\int _{0}^{x}tf( t) \:\mathrm{d} t\right ] ^{\prime }= \int _{0}^{x}f( t)$ d$t+ xf( x) - 2xf( x)$
+$( 2) F^{\prime }(x) = \left [ x\int _{0}^{x}f( t) \:\mathrm{d} t- 2\int _{0}^{x}tf(t) \:\mathrm{d} t\right ] ^{\prime }= \int _{0}^{x}f(t)$ d$t+ xf( x) - 2xf( x)$
 ​	$=\int_{0}^{x}f(t)$d$t-xf(x)=x[f(\xi)-f(x)],\xi$在0与$x$之间(积分中值定理).
 ​	因$f(x)$单调不增，故当$x>0$时 ,$0\leqslant\xi\leqslant x$,于是$f(\boldsymbol{\xi})-f(x)\geqslant0$,从而$F^\prime(x)\geqslant0.$当$x<0$ 时，$x\leqslant\xi\leqslant0$,于是 $f(\xi)-f(x)\leqslant0$,从而$F^\prime(x)\geqslant0.$又$F^{\prime}(0)=0$,综上可知 $F(x)$ 单调不减.
 
@@ -316,9 +316,9 @@ $\displaystyle \lim_{n\to\infty}x_n=a:\forall\varepsilon>0,\exists N(\varepsilon
 **2.函数极限**
 
 (1)自变量趋于无穷大时函数的极限
-$\displaystyle \lim_{x\to+\infty}f(x)=A\colon\forall\varepsilon>0,\exists X(\varepsilon)>0$,当$x>X$时，有$\mid f(x)-A\mid<\varepsilon.$ 
+$\displaystyle \lim_{x\to+\infty}f(x)=A:\forall\varepsilon>0,\exists X(\varepsilon)>0$,当$x>X$时，有$\mid f(x)-A\mid<\varepsilon.$ 
 
-$\displaystyle\lim_{x\to-\infty}f(x)=A\colon\forall\varepsilon>0,\exists X(\varepsilon)>0$,当$x<-X$时，有$\mid f(x)-A\mid<\varepsilon.$
+$\displaystyle\lim_{x\to-\infty}f(x)=A:\forall\varepsilon>0,\exists X(\varepsilon)>0$,当$x<-X$时，有$\mid f(x)-A\mid<\varepsilon.$
 
 $\displaystyle\lim_{x\to\infty}f(x)=A:\forall\varepsilon>0,\exists X(\varepsilon)>0$,当$\mid x\mid>X$时，有$\mid f(x)-A\mid<\varepsilon.$ 
 
@@ -824,9 +824,9 @@ $\begin{aligned}
 
 常用方法
 
-* 方法 1:先证数列 $\{x_n\}$收敛(常用单调有界准则),然后令$\displaystyle \lim_{n\to\infty}x_n=A$,等式 $x_{n+1}=f(x_n)$ 两端
+* 方法 1：先证数列 $\{x_n\}$收敛(常用单调有界准则),然后令$\displaystyle \lim_{n\to\infty}x_n=A$,等式 $x_{n+1}=f(x_n)$ 两端
   取极限得 $A=f(A)$,由此求得极限 $A.$
-* 方法 2:先令$\displaystyle \lim_{n\to\infty} x_n=A$,然后等式 $x_{n+1}=f(x_n$)两端取极限解得$A$,得到极限初步结果，最后
+* 方法 2：先令$\displaystyle \lim_{n\to\infty} x_n=A$,然后等式 $x_{n+1}=f(x_n$)两端取极限解得$A$,得到极限初步结果，最后
   再证明$\displaystyle \lim_{n\to\infty} x_n=A.$
   一般来说，当数列$\left\{x_n\right\}$具有单调性时用方法 1,而当数列$\left\{x_n\right\}$不具有单调性或单调性很难
   判定时用方法 2.
@@ -1146,11 +1146,11 @@ $$
 **(六)高阶导数**
 **常用方法**
 
-* (1)代公式；
+* (1)代公式
 
-* (2)求一阶$y^\prime$、二阶$y^{\prime\prime}$，归纳 $n$ 阶导数$y^{(n)};$
+* (2)求一阶$y^\prime$、二阶$y^{\prime\prime}$，归纳 $n$ 阶导数$y^{(n)}$
 
-* (3)利用泰勒级数(或泰勒公式):
+* (3)利用泰勒级数(或泰勒公式)
 
 ①泰勒级数
 
@@ -1361,7 +1361,7 @@ $$
 
 欲证： $F\left[\xi, f(\xi), f^{\prime}(\xi)\right]=0$,
 (1) 求微分方程 $F\left(x, y, y^{\prime}\right)=0$ 的通解 $H(x, y)=C$;
-(2) 设辅助函数: $g(x)=H(x, f(x))$.
+(2) 设辅助函数： $g(x)=H(x, f(x))$.
 
 3. 几种经典类型的问题
 
@@ -1434,7 +1434,7 @@ $$
 $$
 \frac{a_1}{f^{\prime}\left(\xi_1\right)}+\frac{a_2}{f^{\prime}\left(\xi_2\right)}+\cdots+\frac{a_n}{f^{\prime}\left(\xi_n\right)}=a_1+a_2+\cdots+a_n
 $$
-(2)设 $f(x)$ 在 $[0, a]$ 上可导 $(a>0), f(0)=1, f(a)=0$, 证明: 在 $(0, a)$ 上存在 $x_1<x_2$,使得 $f^{\prime}\left(x_1\right) f^{\prime}\left(x_2\right)=\frac{1}{a^2}$.
+(2)设 $f(x)$ 在 $[0, a]$ 上可导 $(a>0), f(0)=1, f(a)=0$, 证明：在 $(0, a)$ 上存在 $x_1<x_2$,使得 $f^{\prime}\left(x_1\right) f^{\prime}\left(x_2\right)=\frac{1}{a^2}$.
 
 **（三）证明存在一个中值点 $\xi \in(a, b)$, 使 $F\left[\xi, f^{(n)}(\xi)\right] \geqslant 0(n \geqslant 2)$**
 **方法**
@@ -1494,7 +1494,7 @@ $$
 $$
 
 故存在 $\xi \in(0,1)$, 使 $\left|f^{\prime \prime \prime}(\xi)\right| \geqslant 24$.
-【例3】设 $f(x)$ 在 $[0,1]$ 上有二阶连续导数, 且 $\displaystyle f(0)=f(1)=0, \min _{0 \leqslant x \leqslant 1} f(x)=-1$, 证明: $\displaystyle\max _{0 \leqslant x \leqslant 1} f^{\prime \prime}(x) \geqslant 8$.
+【例3】设 $f(x)$ 在 $[0,1]$ 上有二阶连续导数, 且 $\displaystyle f(0)=f(1)=0, \min _{0 \leqslant x \leqslant 1} f(x)=-1$, 证明： $\displaystyle\max _{0 \leqslant x \leqslant 1} f^{\prime \prime}(x) \geqslant 8$.
 
 **证明**：本题只要证明存在 $\xi \in(0,1)$, 使 $f^{\prime \prime}(\xi) \geqslant 8$.
 设 $\displaystyle f(c)=\min _{0 \leqslant x \leqslant 1} f(x)=-1$, 则 $0<c<1$, 且 $f^{\prime}(c)=0$. 由泰勒公式知
@@ -1782,7 +1782,7 @@ $$
 
 2. **换元积分法**
 
-设 $f(x)$ 在区间 $[a, b]$ 上连续, 函数 $x=\varphi(t)$ 满足以下条件:
+设 $f(x)$ 在区间 $[a, b]$ 上连续, 函数 $x=\varphi(t)$ 满足以下条件：
 
 (1) $\varphi(\alpha)=a, \varphi(\beta)=b$ ；
 
@@ -2157,7 +2157,7 @@ $$
 
 能化为$\displaystyle \frac{dy}{dx}=\varphi(\frac{y}x)$的微分方程称为**齐次微分方程**.
 
-求解齐次微分方程的一般方法为: 令 $\displaystyle u=\frac{y}{x}$, 则 $y^{\prime}=u+x u^{\prime}$, 从而将原方程化为 $x u^{\prime}=\varphi(u)-u$ ，此方程为可分离变量的方程。
+求解齐次微分方程的一般方法为： 令 $\displaystyle u=\frac{y}{x}$, 则 $y^{\prime}=u+x u^{\prime}$, 从而将原方程化为 $x u^{\prime}=\varphi(u)-u$ ，此方程为可分离变量的方程。
 
 **3. 线性方程**
 
@@ -2174,7 +2174,7 @@ $$
 
 **5. 全微分方程 (仅数学一要求)**
 
-如果方程 $P(x, y) \mathrm{d} x+Q(x, y) \mathrm{d} y=0$ 的左端是某个函数 $u(x, y)$ 的全微分:
+如果方程 $P(x, y) \mathrm{d} x+Q(x, y) \mathrm{d} y=0$ 的左端是某个函数 $u(x, y)$ 的全微分：
 
 $$
 \mathrm{d} u(x, y)=P(x, y) \mathrm{d} x+Q(x, y) \mathrm{d} y,
@@ -2380,9 +2380,9 @@ $$
 * (2)基本初等函数在其定义域内连续；初等函数在其定义区域内连续；
 * (3)有界闭区域上连续函数的性质
 
-①有界性: 若 $f(x, y)$ 在有界闭区域 $D$ 上连续, 则 $f(x, y)$ 在 $D$ 上有界.
-②最值性: 若 $f(x, y)$ 在有界闭区域 $D$ 上连续, 则 $f(x, y)$ 在 $D$ 上必有最大值和最小值.
-③介值性: 若 $f(x, y)$ 在有界闭区域 $D$ 上连续, 则 $f(x, y)$ 在 $D$ 上可取到介于最小值与最大值之间的任何值。
+①有界性：若 $f(x, y)$ 在有界闭区域 $D$ 上连续, 则 $f(x, y)$ 在 $D$ 上有界.
+②最值性：若 $f(x, y)$ 在有界闭区域 $D$ 上连续, 则 $f(x, y)$ 在 $D$ 上必有最大值和最小值.
+③介值性：若 $f(x, y)$ 在有界闭区域 $D$ 上连续, 则 $f(x, y)$ 在 $D$ 上可取到介于最小值与最大值之间的任何值。
 
 #### （三）偏导数
 
@@ -2437,11 +2437,11 @@ $$
 
 2. **可微性判定**
 
-​	(1) 必要条件:  $f_{x}^{\prime}\left(x_{0}, y_{0}\right)  $与$  f_{y}^{\prime}\left(x_{0}, y_{0}\right) $ 都存在;
+​	(1) 必要条件：  $f_{x}^{\prime}\left(x_{0}, y_{0}\right)  $与$  f_{y}^{\prime}\left(x_{0}, y_{0}\right) $ 都存在;
 
-​	(2) 充分条件:  $f_{x}^{\prime}(x, y)  $和$  f_{y}^{\prime}(x, y) $ 在$  \left(x_{0}, y_{0}\right)$  连续;
+​	(2) 充分条件：  $f_{x}^{\prime}(x, y)  $和$  f_{y}^{\prime}(x, y) $ 在$  \left(x_{0}, y_{0}\right)$  连续;
 
-​	(3) 用定义判定:
+​	(3) 用定义判定：
 
 ①$f_{x}^{\prime}\left(x_{0}, y_{0}\right)  与  f_{y}^{\prime}\left(x_{0}, y_{0}\right)$  是否都存在?
 
@@ -2499,9 +2499,9 @@ $$
 设 $F(x, y, z)$ 有连续一阶偏导数， $F_z^{\prime} \neq 0, z=z(x, y)$ 由 $F(x, y, z)=0$ 所确定.
 **方法**
 
-* ① 公式: $\displaystyle \frac{\partial z}{\partial x}=-\frac{F_x^{\prime}}{F_z^{\prime \prime}}, \frac{\partial z}{\partial y}=-\frac{F_y^{\prime}}{F_z^{\prime}}$;
-* ②等式两边求导: $\displaystyle F_x^{\prime}+F_z^{\prime} \frac{\partial z}{\partial x}=0, F_y^{\prime}+F_z^{\prime} \frac{\partial z}{\partial y}=0$;
-* ③ 利用微分形式不变性: $F_x^{\prime} \mathrm{d} x+F_y^{\prime} \mathrm{d} y+F_z^{\prime} \mathrm{d} z=0$.
+* ① 公式： $\displaystyle \frac{\partial z}{\partial x}=-\frac{F_x^{\prime}}{F_z^{\prime \prime}}, \frac{\partial z}{\partial y}=-\frac{F_y^{\prime}}{F_z^{\prime}}$;
+* ②等式两边求导： $\displaystyle F_x^{\prime}+F_z^{\prime} \frac{\partial z}{\partial x}=0, F_y^{\prime}+F_z^{\prime} \frac{\partial z}{\partial y}=0$;
+* ③ 利用微分形式不变性： $F_x^{\prime} \mathrm{d} x+F_y^{\prime} \mathrm{d} y+F_z^{\prime} \mathrm{d} z=0$.
 
 (2) 由方程组所确定的隐函数 (仅数学一要求)
 
@@ -2554,14 +2554,14 @@ $$
 A=f_{x x}^{\prime \prime}\left(x_0, y_0\right), B=f_{x y}^{\prime \prime}\left(x_0, y_0\right), C=f_{y y}^{\prime \prime}\left(x_0, y_0\right) .
 $$
 
-则有下述结论:
+则有下述结论：
 (1) 若 $A C-B^2>0$, 则 $\left(x_0, y_0\right)$ 为 $f(x, y)$ 的极值点.
 	① $A<0$, 则 $\left(x_0, y_0\right)$ 为 $f(x, y)$ 的极大值点;
 	② $A>0$, 则 $\left(x_0, y_0\right)$ 为 $f(x, y)$ 的极小值点.
 (2) 若 $A C-B^2<0$, 则 $\left(x_0, y_0\right)$ 不为 $f(x, y)$ 的极值点.
 (3) 若 $A C-B^2=0$, 则 $\left(x_0, y_0\right)$ 可能为 $f(x, y)$ 的极值点, 也可能不为 $f(x, y)$ 的极值点 (此时一般用定义判定).
 
-求具有二阶连续偏导数的二元函数 $z=f(x, y)$ 极值的一般步骤:
+求具有二阶连续偏导数的二元函数 $z=f(x, y)$ 极值的一般步骤：
 (1) 求出 $f(x, y)$ 的驻点 $P_1, \cdots, P_k$.
 (2) 利用极值的充分条件判定驻点 $P_i(i=1,2, \cdots, k)$ 是否为极值点.
 
@@ -2569,7 +2569,7 @@ $$
 
 #### （二）条件极值及拉格朗日乘数法
 
-求 $z=f(x, y)$ 在条件 $\varphi(x, y)=0$ 下的条件极值的一般方法为:
+求 $z=f(x, y)$ 在条件 $\varphi(x, y)=0$ 下的条件极值的一般方法为：
 （1）构造拉格朗日函数 $F(x, y, \lambda)=f(x, y)+\lambda \varphi(x, y)$ ；
 （2）将 $F(x, y, \lambda)$ 分别对 $x, y, \lambda$ 求偏导数，构造方程组
 $$
@@ -2683,11 +2683,11 @@ $$
 ![6.1.4.3 不规则扇形带状区域](文档插图/6.1.4.3 不规则扇形带状区域.png)
 
 注：适合用极坐标计算的二重积分的特征。
-①适合用极坐标计算的被积函数:
+①适合用极坐标计算的被积函数：
 $$
 f\left(\sqrt{x^2+y^2}\right), f\left(\frac{y}{x}\right), f\left(\frac{x}{y}\right) .
 $$
-②适合用极坐标的积分域:
+②适合用极坐标的积分域：
 
 如 $x^2+y^2 \leqslant R^2 ; r^2 \leqslant x^2+y^2 \leqslant R^2 ; x^2+y^2 \leqslant 2 a x ; x^2+y^2 \leqslant 2 b y$.
 
