:sparkles:数学公式显示修改

--- a/高等数学.md
+++ b/高等数学.md
@@ -12,7 +12,7 @@
 
 ​	**定义域** $D_f=D$
 
-​	**值域** $Rf=f(D)=\{y|y=f(x),x∈D\}$
+​	**值域** $R_f=f(D)=\{y|y=f(x),x∈D\}$
 
 函数概念的两个基本要素：定义域、对应规则，基本要素完全相同的函数就是同一函数
 
@@ -29,7 +29,7 @@ $$
 
 复合函数的定义：设$y=f(u)$的定义域为$D_f$，$u=g(x)$的定义域为$D_g$，值域为$R_g$，若$D_f∩R_g≠∅$，则称函数$y=f[g(x)]$为函数$y=f(u)$与$u=g(x)$的**复合函数**。（若$D_f∩R_g=∅$则不能复合）
 
-它的定义域为$\{x|x∈D_g，g(x)∈D_f\}$
+它的定义域为$\{x|x∈D_g, \quad g(x)∈D_f\}$
 
 **3.反函数**
 
